refactor: fix more checkstyle violations * manually fixed remaining issues * used regex replace for some constants * reordered overloaded methods next to each other * renamed more variables * adjusted lines that couldn't be automatically split * more fixes