@@ -28,18 +28,22 @@ import java.util.Set;
 
 public class AuthzResolver {
 
-  public final static String MFA_CRITICAL_ATTR = "mfaCriticalObject";
+  public static final String MFA_CRITICAL_ATTR = "mfaCriticalObject";
+
+  private AuthzResolver() {
+
+  }
 
   /**
-   * Checks if the principal is authorized.
-   * This method should be accessed through external components.
+   * Checks if the principal is authorized. This method should be accessed through external components.
    *
    * @param sess             PerunSession which contains the principal.
    * @param policyDefinition of policy which contains authorization rules.
    * @param objects          as list of PerunBeans on which will be authorization provided. (e.g. groups, Vos, etc...)
    * @return true if the principal has particular rights, false otherwise.
    * @throws PolicyNotExistsException when the given policyDefinition does not exist in the PerunPoliciesContainer.
-   * @throws MfaPrivilegeException    when the principal isn't authenticated with MFA but the policy definition requires it
+   * @throws MfaPrivilegeException    when the principal isn't authenticated with MFA but the policy definition requires
+   *                                  it
    */
   public static boolean authorizedExternal(PerunSession sess, String policyDefinition, List<PerunBean> objects)
       throws PolicyNotExistsException {
@@ -47,14 +51,14 @@ public class AuthzResolver {
   }
 
   /**
-   * Checks if the principal is authorized.
-   * This method should be used in the internal code.
+   * Checks if the principal is authorized. This method should be used in the internal code.
    *
    * @param sess             PerunSession which contains the principal.
    * @param policyDefinition of policy which contains authorization rules.
    * @param objects          as list of PerunBeans on which will be authorization provided. (e.g. groups, Vos, etc...)
    * @return true if the principal has particular rights, false otherwise.
-   * @throws MfaPrivilegeException when the principal isn't authenticated with MFA but the policy definition requires it
+   * @throws MfaPrivilegeException when the principal isn't authenticated with MFA but the policy definition requires
+   *                               it
    */
   public static boolean authorizedInternal(PerunSession sess, String policyDefinition, List<PerunBean> objects) {
     try {
@@ -65,32 +69,14 @@ public class AuthzResolver {
   }
 
   /**
-   * Checks if the principal is authorized.
-   * This method should be used in the internal code.
-   *
-   * @param sess             PerunSession which contains the principal.
-   * @param policyDefinition of policy which contains authorization rules.
-   * @param objects          an array of PerunBeans on which will be authorization provided. (e.g. groups, Vos, etc...)
-   * @return true if the principal has particular rights, false otherwise.
-   * @throws MfaPrivilegeException when the principal isn't authenticated with MFA but the policy definition requires it
-   */
-  public static boolean authorizedInternal(PerunSession sess, String policyDefinition, PerunBean... objects) {
-    try {
-      return AuthzResolverBlImpl.authorized(sess, policyDefinition, Arrays.asList(objects));
-    } catch (PolicyNotExistsException e) {
-      throw new InternalErrorException(e);
-    }
-  }
-
-  /**
-   * Checks if the principal is authorized.
-   * Used when there are no PerunBeans needed for authorization.
-   * This method should be used in the internal code.
+   * Checks if the principal is authorized. Used when there are no PerunBeans needed for authorization. This method
+   * should be used in the internal code.
    *
    * @param sess             PerunSession which contains the principal.
    * @param policyDefinition of policy which contains authorization rules.
    * @return true if the principal has particular rights, false otherwise.
-   * @throws MfaPrivilegeException when the principal isn't authenticated with MFA but the policy definition requires it
+   * @throws MfaPrivilegeException when the principal isn't authenticated with MFA but the policy definition requires
+   *                               it
    */
   public static boolean authorizedInternal(PerunSession sess, String policyDefinition) {
     try {
@@ -101,14 +87,592 @@ public class AuthzResolver {
   }
 
   /**
-   * Check if the principal is the owner of the application.
+   * Checks if the principal is authorized. This method should be used in the internal code.
    *
-   * @param sess PerunSession which contains the principal.
-   * @param app  application which principal wants to access
+   * @param sess             PerunSession which contains the principal.
+   * @param policyDefinition of policy which contains authorization rules.
+   * @param objects          an array of PerunBeans on which will be authorization provided. (e.g. groups, Vos, etc...)
    * @return true if the principal has particular rights, false otherwise.
+   * @throws MfaPrivilegeException when the principal isn't authenticated with MFA but the policy definition requires
+   *                               it
    */
-  public static boolean selfAuthorizedForApplication(PerunSession sess, Application app) {
-    return AuthzResolverBlImpl.selfAuthorizedForApplication(sess, app);
+  public static boolean authorizedInternal(PerunSession sess, String policyDefinition, PerunBean... objects) {
+    try {
+      return AuthzResolverBlImpl.authorized(sess, policyDefinition, Arrays.asList(objects));
+    } catch (PolicyNotExistsException e) {
+      throw new InternalErrorException(e);
+    }
+  }
+
+  /**
+   * Check whether the principal is authorized to manage the role on the object.
+   *
+   * @param sess                principal's perun session
+   * @param complementaryObject bounded with the role
+   * @param role                which will be managed
+   * @return
+   * @throws RoleManagementRulesNotExistsException when the role does not have the management rules.
+   */
+  public static boolean authorizedToManageRole(PerunSession sess, PerunBean complementaryObject, String role)
+      throws RoleManagementRulesNotExistsException {
+    if (!roleExists(role)) {
+      throw new InternalErrorException("Role: " + role + " does not exists.");
+    }
+    return AuthzResolverBlImpl.authorizedToManageRole(sess, complementaryObject, role);
+  }
+
+  /**
+   * Check whether the principal is authorized to read the role on the object.
+   *
+   * @param sess                principal's perun session
+   * @param complementaryObject bounded with the role
+   * @param role                which will be read
+   * @return
+   * @throws RoleManagementRulesNotExistsException when the role does not have the management rules.
+   */
+  public static boolean authorizedToReadRole(PerunSession sess, PerunBean complementaryObject, String role)
+      throws RoleManagementRulesNotExistsException {
+    if (!roleExists(role)) {
+      throw new InternalErrorException("Role: " + role + " does not exists.");
+    }
+    return AuthzResolverBlImpl.authorizedToReadRole(sess, complementaryObject, role);
+  }
+
+  /**
+   * Get all authorizedGroups for complementary object and role.
+   *
+   * @param sess                perun session
+   * @param complementaryObject for which we will get administrator groups
+   * @param role                expected role to filter authorizedGroups by
+   * @return list of authorizedGroups for complementary object and role
+   */
+  public static List<Group> getAdminGroups(PerunSession sess, PerunBean complementaryObject, String role)
+      throws PrivilegeException, RoleCannotBeManagedException {
+    Utils.checkPerunSession(sess);
+    Utils.notNull(role, "role");
+    Utils.notNull(complementaryObject, "complementaryObject");
+
+    if (!roleExists(role)) {
+      throw new InternalErrorException("Role: " + role + " does not exists.");
+    }
+
+    // Authorization
+    try {
+      if (!authorizedToReadRole(sess, complementaryObject, role)) {
+        throw new PrivilegeException("You are not privileged to use the method getAdminGroups.");
+      }
+    } catch (RoleManagementRulesNotExistsException e) {
+      throw new InternalErrorException("Management rules not exist for the role " + role, e);
+    }
+
+    return AuthzResolverBlImpl.getAdminGroups(complementaryObject, role);
+  }
+
+  /**
+   * Get all valid user administrators (for group-based rights, status must be VALID for both Vo and group) for
+   * complementary object and role.
+   * <p>
+   * If <b>onlyDirectAdmins</b> is <b>true</b>, return only direct users of the complementary object for role.
+   *
+   * @param sess                perun session
+   * @param complementaryObject for which we will get administrator
+   * @param role                expected role to filter managers by
+   * @param onlyDirectAdmins    if true, get only direct user administrators (if false, get both direct and indirect)
+   * @return list of user administrators for complementary object and role.
+   */
+  public static List<User> getAdmins(PerunSession sess, PerunBean complementaryObject, String role,
+                                     boolean onlyDirectAdmins) throws PrivilegeException, RoleCannotBeManagedException {
+    Utils.checkPerunSession(sess);
+    Utils.notNull(role, "role");
+    Utils.notNull(complementaryObject, "complementaryObject");
+
+    if (!roleExists(role)) {
+      throw new InternalErrorException("Role: " + role + " does not exists.");
+    }
+
+    // Authorization
+    try {
+      if (!authorizedToReadRole(sess, complementaryObject, role)) {
+        throw new PrivilegeException("You are not privileged to use the method getRichAdmins.");
+      }
+    } catch (RoleManagementRulesNotExistsException e) {
+      throw new InternalErrorException("Management rules not exist for the role " + role, e);
+    }
+
+    return AuthzResolverBlImpl.getAdmins(sess, complementaryObject, role, onlyDirectAdmins);
+  }
+
+  /**
+   * Return all loaded perun policies.
+   *
+   * @return all loaded policies
+   */
+  public static List<PerunPolicy> getAllPolicies() {
+    return AuthzResolverBlImpl.getAllPolicies();
+  }
+
+  /**
+   * Return all loaded roles management rules.
+   *
+   * @return all roles management rules
+   */
+  public static List<RoleManagementRules> getAllRolesManagementRules() {
+    return AuthzResolverBlImpl.getAllRolesManagementRules();
+  }
+
+  /**
+   * Returns all complementary objects for defined role.
+   *
+   * @param sess perun session
+   * @param role to get object for
+   * @return list of complementary objects
+   */
+  public static List<PerunBean> getComplementaryObjectsForRole(PerunSession sess, String role) {
+    if (!roleExists(role)) {
+      throw new InternalErrorException("Role: " + role + " does not exists.");
+    }
+    return AuthzResolverBlImpl.getComplementaryObjectsForRole(sess, role);
+  }
+
+  /**
+   * Returns complementary objects for defined role filtered by particular class, e.g. Vo, Group, ...
+   *
+   * @param sess           perun session
+   * @param role           to get object for
+   * @param perunBeanClass particular class ( Vo | Group | ... )
+   * @return list of complementary objects
+   */
+  public static List<PerunBean> getComplementaryObjectsForRole(PerunSession sess, String role, Class perunBeanClass) {
+    if (!roleExists(role)) {
+      throw new InternalErrorException("Role: " + role + " does not exists.");
+    }
+    return AuthzResolverBlImpl.getComplementaryObjectsForRole(sess, role, perunBeanClass);
+  }
+
+  /**
+   * Get all Facilities where the given user has set one of the given roles or the given user is a member of an
+   * authorized group with such roles. If user parameter is null then Facilities are retrieved for the given principal.
+   *
+   * @param sess  Perun session
+   * @param user  for who Facilities are retrieved
+   * @param roles for which Facilities are retrieved
+   * @return List of Facilities
+   * @throws PrivilegeException when the principal is not authorized.
+   */
+  public static List<Facility> getFacilitiesWhereUserIsInRoles(PerunSession sess, User user, List<String> roles)
+      throws PrivilegeException {
+    Utils.checkPerunSession(sess);
+    Utils.notNull(roles, "roles");
+
+    if (user == null) {
+      user = sess.getPerunPrincipal().getUser();
+    } else {
+      //Authorization
+      if (!authorizedInternal(sess, "getFacilitiesWhereUserIsInRoles_User_List<String>_policy", user)) {
+        throw new PrivilegeException(sess, "getFacilitiesWhereUserIsInRoles");
+      }
+    }
+
+    return AuthzResolverBlImpl.getFacilitiesWhereUserIsInRoles(sess, user, roles);
+  }
+
+  /**
+   * Get all group role names.
+   *
+   * @param sess  perun session
+   * @param group Group
+   * @return list of strings, which represents roles.
+   * @throws InternalErrorException
+   * @throws GroupNotExistsException
+   */
+  public static List<String> getGroupRoleNames(PerunSession sess, Group group)
+      throws GroupNotExistsException, PrivilegeException {
+    Utils.checkPerunSession(sess);
+    ((PerunBl) sess.getPerun()).getGroupsManagerBl().checkGroupExists(sess, group);
+
+    //Authorization
+    if (!authorizedInternal(sess, "getGroupRoleNames_Group_policy")) {
+      throw new PrivilegeException("getGroupRoleNames.");
+    }
+
+    return cz.metacentrum.perun.core.blImpl.AuthzResolverBlImpl.getGroupRoleNames(sess, group);
+  }
+
+  /**
+   * Get all roles for a given group.
+   *
+   * @param sess    perun session
+   * @param groupId id of a group
+   * @return AuthzRoles object which contains all roles with perunbeans
+   * @throws InternalErrorException
+   * @throws GroupNotExistsException
+   */
+  public static AuthzRoles getGroupRoles(PerunSession sess, int groupId)
+      throws GroupNotExistsException, PrivilegeException {
+    Utils.checkPerunSession(sess);
+    Group group = ((PerunBl) sess.getPerun()).getGroupsManagerBl().getGroupById(sess, groupId);
+
+    //Authorization
+    if (!authorizedInternal(sess, "getGroupRoles_int_policy")) {
+      throw new PrivilegeException("getGroupRoles.");
+    }
+
+    return AuthzResolverBlImpl.getGroupRoles(sess, group);
+  }
+
+  /**
+   * Get all Groups where the given user has set one of the given roles or the given user is a member of an authorized
+   * group with such roles. If user parameter is null then Groups are retrieved for the given principal.
+   * <p>
+   * Method does not return subgroups of the fetched groups.
+   *
+   * @param sess  Perun session
+   * @param user  for who Groups are retrieved
+   * @param roles for which Groups are retrieved
+   * @return List of Groups
+   * @throws PrivilegeException when the principal is not authorized.
+   */
+  public static List<Group> getGroupsWhereUserIsInRoles(PerunSession sess, User user, List<String> roles)
+      throws PrivilegeException {
+    Utils.checkPerunSession(sess);
+    Utils.notNull(roles, "roles");
+
+    if (user == null) {
+      user = sess.getPerunPrincipal().getUser();
+    } else {
+      //Authorization
+      if (!authorizedInternal(sess, "getGroupsWhereUserIsInRoles_User_List<String>_policy", user)) {
+        throw new PrivilegeException(sess, "getGroupsWhereUserIsInRoles");
+      }
+    }
+
+    return AuthzResolverBlImpl.getGroupsWhereUserIsInRoles(sess, user, roles);
+  }
+
+  /**
+   * Returns user which is associated with credentials used to log-in to Perun.
+   *
+   * @param sess perun session
+   * @return currently logged user
+   */
+  public static User getLoggedUser(PerunSession sess) {
+    return AuthzResolverBlImpl.getLoggedUser(sess);
+  }
+
+  /**
+   * Get all Members where the given user has set one of the given roles or the given user is a member of an authorized
+   * group with such roles. If user parameter is null then Members are retrieved for the given principal.
+   *
+   * @param sess  Perun session
+   * @param user  for who Members are retrieved
+   * @param roles for which Members are retrieved
+   * @return List of Members
+   * @throws PrivilegeException when the principal is not authorized.
+   */
+  public static List<Member> getMembersWhereUserIsInRoles(PerunSession sess, User user, List<String> roles)
+      throws PrivilegeException {
+    Utils.checkPerunSession(sess);
+    Utils.notNull(roles, "roles");
+
+    if (user == null) {
+      user = sess.getPerunPrincipal().getUser();
+    } else {
+      //Authorization
+      if (!authorizedInternal(sess, "getMembersWhereUserIsInRoles_User_List<String>_policy", user)) {
+        throw new PrivilegeException(sess, "getMembersWhereUserIsInRoles");
+      }
+    }
+
+    return AuthzResolverBlImpl.getMembersWhereUserIsInRoles(sess, user, roles);
+  }
+
+  /**
+   * Returns PerunPrincipal object associated with current session. It contains necessary information, including user
+   * identification, authorization and metadata. Each call of this method refresh the session including authorization
+   * data.
+   *
+   * @param sess perun session
+   * @return perunPrincipal object
+   * @throws InternalErrorException if the PerunSession is not valid.
+   */
+  public static PerunPrincipal getPerunPrincipal(PerunSession sess) {
+    return AuthzResolverBlImpl.getPerunPrincipal(sess);
+  }
+
+  /**
+   * Get all principal role names.
+   *
+   * @param sess perun session
+   * @return list of strings, which represents roles.
+   */
+  public static List<String> getPrincipalRoleNames(PerunSession sess) {
+    return AuthzResolverBlImpl.getPrincipalRoleNames(sess);
+  }
+
+  /**
+   * Get all Resources where the given user has set one of the given roles or the given user is a member of an
+   * authorized group with such roles. If user parameter is null then Resources are retrieved for the given principal.
+   *
+   * @param sess  Perun session
+   * @param user  for who Resources are retrieved
+   * @param roles for which Resources are retrieved
+   * @return List of Resources
+   * @throws PrivilegeException when the principal is not authorized.
+   */
+  public static List<Resource> getResourcesWhereUserIsInRoles(PerunSession sess, User user, List<String> roles)
+      throws PrivilegeException {
+    Utils.checkPerunSession(sess);
+    Utils.notNull(roles, "roles");
+
+    if (user == null) {
+      user = sess.getPerunPrincipal().getUser();
+    } else {
+      //Authorization
+      if (!authorizedInternal(sess, "getResourcesWhereUserIsInRoles_User_List<String>_policy", user)) {
+        throw new PrivilegeException(sess, "getResourcesWhereUserIsInRoles");
+      }
+    }
+
+    return AuthzResolverBlImpl.getResourcesWhereUserIsInRoles(sess, user, roles);
+  }
+
+  /**
+   * Get all valid richUser administrators (for group-based rights, status must be VALID for both Vo and group) for
+   * complementary object and role with specified attributes.
+   * <p>
+   * If <b>onlyDirectAdmins</b> is <b>true</b>, return only direct users of the complementary object for role with
+   * specific attributes. If <b>allUserAttributes</b> is <b>true</b>, do not specify attributes through list and return
+   * them all in objects richUser. Ignoring list of specific attributes.
+   *
+   * @param sess                perun session
+   * @param complementaryObject for which we will get administrator
+   * @param specificAttributes  list of specified attributes which are needed in object richUser
+   * @param role                expected role to filter managers by
+   * @param onlyDirectAdmins    if true, get only direct user administrators (if false, get both direct and indirect)
+   * @param allUserAttributes   if true, get all possible user attributes and ignore list of specificAttributes (if
+   *                            false, get only specific attributes)
+   * @return list of richUser administrators for complementary object and role with specified attributes.
+   */
+  public static List<RichUser> getRichAdmins(PerunSession sess, PerunBean complementaryObject,
+                                             List<String> specificAttributes, String role, boolean onlyDirectAdmins,
+                                             boolean allUserAttributes)
+      throws PrivilegeException, RoleCannotBeManagedException {
+    Utils.checkPerunSession(sess);
+    Utils.notNull(role, "role");
+    Utils.notNull(complementaryObject, "complementaryObject");
+
+    if (!roleExists(role)) {
+      throw new InternalErrorException("Role: " + role + " does not exists.");
+    }
+
+    // Authorization
+    try {
+      if (!authorizedToReadRole(sess, complementaryObject, role)) {
+        throw new PrivilegeException("You are not privileged to use the method getRichAdmins.");
+      }
+    } catch (RoleManagementRulesNotExistsException e) {
+      throw new InternalErrorException("Management rules not exist for the role " + role, e);
+    }
+
+    return AuthzResolverBlImpl.getRichAdmins(sess, complementaryObject, specificAttributes, role, onlyDirectAdmins,
+        allUserAttributes);
+  }
+
+  /**
+   * Returns map of role name and map of corresponding role complementary objects (perun beans) distinguished by type. *
+   * together with list of authorized groups where user is member: *     Map< RoleName, Map< BeanName, Map< BeanID,
+   * List<AuthzGroup> >>>
+   *
+   * @param sess   perun session
+   * @param userId id of a user
+   * @return Map<String, Map < String, Map < Integer, List < Group>>>> roles with map of complementary objects with
+   * associated authorized groups
+   */
+  public static Map<String, Map<String, Map<Integer, List<Group>>>> getRoleComplementaryObjectsWithAuthorizedGroups(
+      PerunSession sess, int userId) throws UserNotExistsException, PrivilegeException {
+    Utils.checkPerunSession(sess);
+    User user = ((PerunBl) sess.getPerun()).getUsersManagerBl().getUserById(sess, userId);
+
+    //Authorization
+    if (!authorizedInternal(sess, "getRoleComplementaryObjectsWithAuthorizedGroups_int_policy", user)) {
+      throw new PrivilegeException("getRoleComplementaryObjectsWithAuthorizedGroups.");
+    }
+
+    return AuthzResolverBlImpl.getRoleComplementaryObjectsWithAuthorizedGroups(sess, user);
+  }
+
+  /**
+   * Returns user's roles resulting from being a VALID member of authorized groups.
+   *
+   * @param sess   perun session
+   * @param userId id of a user
+   * @return AuthzRoles object which contains roles with perunbeans
+   * @throws InternalErrorException
+   */
+  public static AuthzRoles getRolesObtainedFromAuthorizedGroupMemberships(PerunSession sess, int userId)
+      throws UserNotExistsException, PrivilegeException {
+    Utils.checkPerunSession(sess);
+    User user = ((PerunBl) sess.getPerun()).getUsersManagerBl().getUserById(sess, userId);
+
+    //Authorization
+    if (!authorizedInternal(sess, "getRolesObtainedFromAuthorizedGroupMemberships_int_policy", user)) {
+      throw new PrivilegeException("getRolesObtainedFromAuthorizedGroupMemberships.");
+    }
+
+    return AuthzResolverBlImpl.getRolesObtainedFromAuthorizedGroupMemberships(sess, user);
+  }
+
+  /**
+   * Get all SecurityTeams where the given user has set one of the given roles or the given user is a member of an
+   * authorized group with such roles. If user parameter is null then SecurityTeams are retrieved for the given
+   * principal.
+   *
+   * @param sess  Perun session
+   * @param user  for who SecurityTeams are retrieved
+   * @param roles for which SecurityTeams are retrieved
+   * @return List of SecurityTeams
+   * @throws PrivilegeException when the principal is not authorized.
+   */
+  public static List<SecurityTeam> getSecurityTeamsWhereUserIsInRoles(PerunSession sess, User user, List<String> roles)
+      throws PrivilegeException {
+    Utils.checkPerunSession(sess);
+    Utils.notNull(roles, "roles");
+
+    if (user == null) {
+      user = sess.getPerunPrincipal().getUser();
+    } else {
+      //Authorization
+      if (!authorizedInternal(sess, "getSecurityTeamsWhereUserIsInRoles_User_List<String>_policy", user)) {
+        throw new PrivilegeException(sess, "getSecurityTeamsWhereUserIsInRoles");
+      }
+    }
+
+    return AuthzResolverBlImpl.getSecurityTeamsWhereUserIsInRoles(sess, user, roles);
+  }
+
+  /**
+   * Get all user role names. Does not include membership and sponsorship role.
+   *
+   * @param sess perun session
+   * @param user User
+   * @return list of strings, which represents roles.
+   */
+  public static List<String> getUserRoleNames(PerunSession sess, User user)
+      throws UserNotExistsException, PrivilegeException {
+    Utils.checkPerunSession(sess);
+    ((PerunBl) sess.getPerun()).getUsersManagerBl().checkUserExists(sess, user);
+
+    //Authorization
+    if (!authorizedInternal(sess, "getUserRoleNames_User_policy")) {
+      throw new PrivilegeException("getUserRoleNames.");
+    }
+
+    return AuthzResolverBlImpl.getUserRoleNames(sess, user);
+  }
+
+  /**
+   * Returns user's direct roles, can also include roles resulting from being a VALID member of authorized groups.
+   * Returns also sponsorship and membership roles.
+   *
+   * @param sess                         perun session
+   * @param userId                       id of a user
+   * @param getAuthorizedGroupBasedRoles include roles based on membership in authorized groups
+   * @return AuthzRoles object which contains all roles with perunbeans
+   * @throws InternalErrorException
+   * @throws UserNotExistsException
+   */
+  public static AuthzRoles getUserRoles(PerunSession sess, int userId, boolean getAuthorizedGroupBasedRoles)
+      throws UserNotExistsException, PrivilegeException {
+    Utils.checkPerunSession(sess);
+    User user = ((PerunBl) sess.getPerun()).getUsersManagerBl().getUserById(sess, userId);
+
+    //Authorization
+    if (!authorizedInternal(sess, "getUserRoles_int_boolean_policy", user)) {
+      throw new PrivilegeException("getUserRoles.");
+    }
+
+    return AuthzResolverBlImpl.getUserRoles(sess, user, getAuthorizedGroupBasedRoles);
+  }
+
+  /**
+   * Get all Vos where the given user has set one of the given roles or the given user is a member of an authorized
+   * group with such roles. If user parameter is null then Vos are retrieved for the given principal.
+   *
+   * @param sess  Perun session
+   * @param user  for who Vos are retrieved
+   * @param roles for which Vos are retrieved
+   * @return List of Vos
+   * @throws PrivilegeException when the principal is not authorized.
+   */
+  public static List<Vo> getVosWhereUserIsInRoles(PerunSession sess, User user, List<String> roles)
+      throws PrivilegeException {
+    Utils.checkPerunSession(sess);
+    Utils.notNull(roles, "roles");
+
+    if (user == null) {
+      user = sess.getPerunPrincipal().getUser();
+    } else {
+      //Authorization
+      if (!authorizedInternal(sess, "getVosWhereUserIsInRoles_User_List<String>_policy", user)) {
+        throw new PrivilegeException(sess, "getVosWhereUserIsInRoles");
+      }
+    }
+
+    return AuthzResolverBlImpl.getVosWhereUserIsInRoles(sess, user, roles);
+  }
+
+  /**
+   * This methods verifies if the current principal has one of the given roles for the given object.
+   *
+   * @param sess                session
+   * @param complementaryObject complementary object
+   * @param allowedRoles        set of roles which are tested
+   * @return true, if the principal is authorized, false otherwise
+   * @throws InternalErrorException internal error
+   */
+  public static boolean hasOneOfTheRolesForObject(PerunSession sess, PerunBean complementaryObject,
+                                                  Set<String> allowedRoles) {
+    if (allowedRoles == null) {
+      throw new InternalErrorException("Unsupported role.");
+    }
+    for (String allowedRole : allowedRoles) {
+      if (!roleExists(allowedRole)) {
+        throw new InternalErrorException("Role: " + allowedRole + " does not exists.");
+      }
+      if (isAuthorized(sess, allowedRole, complementaryObject)) {
+        return true;
+      }
+    }
+    return false;
+  }
+
+  /**
+   * Returns true if the perunPrincipal has requested role.
+   *
+   * @param perunPrincipal acting person for whom the role is checked
+   * @param role           role to be checked
+   */
+  public static boolean hasRole(PerunPrincipal perunPrincipal, String role) {
+    if (!roleExists(role)) {
+      throw new InternalErrorException("Role: " + role + " does not exists.");
+    }
+    return AuthzResolverBlImpl.hasRole(perunPrincipal, role);
+  }
+
+  /**
+   * Checks if the principal is authorized.
+   *
+   * @param sess perun session
+   * @param role required role
+   * @return true if the principal authorized, false otherwise
+   * @throws InternalErrorException if something goes wrong
+   */
+  @Deprecated
+  public static boolean isAuthorized(PerunSession sess, String role) {
+    if (!roleExists(role)) {
+      throw new InternalErrorException("Role: " + role + " does not exists.");
+    }
+    return AuthzResolverBlImpl.isAuthorized(sess, role);
   }
 
   /**
@@ -209,63 +773,6 @@ public class AuthzResolver {
   }
 
   /**
-   * Checks if the principal is authorized to do some action of user attribute.
-   *
-   * @param sess       perun session
-   * @param actionType type of action on attribute (ex.: write, read, etc...)
-   * @param attrDef    attribute what principal want to work with
-   * @param user       primary Bean of Attribute (can't be null)
-   * @return true if principal is authorized, false if not
-   */
-  @Deprecated
-  public static boolean isAuthorizedForAttribute(PerunSession sess, ActionType actionType, AttributeDefinition attrDef,
-                                                 User user) {
-    try {
-      return AuthzResolverBlImpl.isAuthorizedForAttribute(sess, actionType, attrDef, user);
-    } catch (WrongAttributeAssignmentException ex) {
-      throw new InternalErrorException(ex);
-    }
-  }
-
-  /**
-   * Checks if the principal is authorized to do some action of member attribute.
-   *
-   * @param sess       perun session
-   * @param actionType type of action on attribute (ex.: write, read, etc...)
-   * @param attrDef    attribute what principal want to work with
-   * @param member     primary Bean of Attribute (can't be null)
-   * @return true if principal is authorized, false if not
-   */
-  @Deprecated
-  public static boolean isAuthorizedForAttribute(PerunSession sess, ActionType actionType, AttributeDefinition attrDef,
-                                                 Member member) {
-    try {
-      return AuthzResolverBlImpl.isAuthorizedForAttribute(sess, actionType, attrDef, member);
-    } catch (WrongAttributeAssignmentException ex) {
-      throw new InternalErrorException(ex);
-    }
-  }
-
-  /**
-   * Checks if the principal is authorized to do some action of vo attribute.
-   *
-   * @param sess       perun session
-   * @param actionType type of action on attribute (ex.: write, read, etc...)
-   * @param attrDef    attribute what principal want to work with
-   * @param vo         primary Bean of Attribute (can't be null)
-   * @return true if principal is authorized, false if not
-   */
-  @Deprecated
-  public static boolean isAuthorizedForAttribute(PerunSession sess, ActionType actionType, AttributeDefinition attrDef,
-                                                 Vo vo) {
-    try {
-      return AuthzResolverBlImpl.isAuthorizedForAttribute(sess, actionType, attrDef, vo);
-    } catch (WrongAttributeAssignmentException ex) {
-      throw new InternalErrorException(ex);
-    }
-  }
-
-  /**
    * Checks if the principal is authorized to do some action of PerunBean attribute.
    *
    * @param sess       session
@@ -304,6 +811,102 @@ public class AuthzResolver {
     }
     throw new UnsupportedOperationException(
         "method - isAuthorizedForAttribute - called with unsupported PerunBean type - " + bean.getBeanName());
+  }
+
+  /**
+   * Checks if the principal is authorized to do some action of vo attribute.
+   *
+   * @param sess       perun session
+   * @param actionType type of action on attribute (ex.: write, read, etc...)
+   * @param attrDef    attribute what principal want to work with
+   * @param vo         primary Bean of Attribute (can't be null)
+   * @return true if principal is authorized, false if not
+   */
+  @Deprecated
+  public static boolean isAuthorizedForAttribute(PerunSession sess, ActionType actionType, AttributeDefinition attrDef,
+                                                 Vo vo) {
+    try {
+      return AuthzResolverBlImpl.isAuthorizedForAttribute(sess, actionType, attrDef, vo);
+    } catch (WrongAttributeAssignmentException ex) {
+      throw new InternalErrorException(ex);
+    }
+  }
+
+  //  /**
+  //   * Returns true if the perun principal inside the perun session is resource admin.
+  //   *
+  //   * @param sess perun session
+  //   * @return true if the perun principal is resource admin.
+  //   */
+  //  public static boolean isResourceAdmin(PerunSession sess) {
+  //    return AuthzResolverBlImpl.isResourceAdmin(sess);
+  //  }
+  //
+  //  /**
+  //   * Returns true if the perun principal inside the perun session is security admin.
+  //   *
+  //   * @param sess perun session
+  //   * @return true if the perun principal is security admin.
+  //   */
+  //  public static boolean isSecurityAdmin(PerunSession sess) {
+  //    return AuthzResolverBlImpl.isSecurityAdmin(sess);
+  //  }
+  //
+  //  /**
+  //   * Returns true if the perun principal inside the perun session is vo observer.
+  //   *
+  //   * @param sess perun session
+  //   * @return true if the perun principal is vo observer
+  //   */
+  //  public static boolean isVoObserver(PerunSession sess) {
+  //    return AuthzResolverBlImpl.isVoObserver(sess);
+  //  }
+  //
+  //  /**
+  //   * Returns true if the perun principal inside the perun session is top group creator.
+  //   *
+  //   * @param sess perun session
+  //   * @return true if the perun principal is top group creator.
+  //   */
+  //  public static boolean isTopGroupCreator(PerunSession sess) {
+  //    return AuthzResolverBlImpl.isTopGroupCreator(sess); }
+
+  /**
+   * Checks if the principal is authorized to do some action of user attribute.
+   *
+   * @param sess       perun session
+   * @param actionType type of action on attribute (ex.: write, read, etc...)
+   * @param attrDef    attribute what principal want to work with
+   * @param user       primary Bean of Attribute (can't be null)
+   * @return true if principal is authorized, false if not
+   */
+  @Deprecated
+  public static boolean isAuthorizedForAttribute(PerunSession sess, ActionType actionType, AttributeDefinition attrDef,
+                                                 User user) {
+    try {
+      return AuthzResolverBlImpl.isAuthorizedForAttribute(sess, actionType, attrDef, user);
+    } catch (WrongAttributeAssignmentException ex) {
+      throw new InternalErrorException(ex);
+    }
+  }
+
+  /**
+   * Checks if the principal is authorized to do some action of member attribute.
+   *
+   * @param sess       perun session
+   * @param actionType type of action on attribute (ex.: write, read, etc...)
+   * @param attrDef    attribute what principal want to work with
+   * @param member     primary Bean of Attribute (can't be null)
+   * @return true if principal is authorized, false if not
+   */
+  @Deprecated
+  public static boolean isAuthorizedForAttribute(PerunSession sess, ActionType actionType, AttributeDefinition attrDef,
+                                                 Member member) {
+    try {
+      return AuthzResolverBlImpl.isAuthorizedForAttribute(sess, actionType, attrDef, member);
+    } catch (WrongAttributeAssignmentException ex) {
+      throw new InternalErrorException(ex);
+    }
   }
 
   /**
@@ -435,8 +1038,8 @@ public class AuthzResolver {
       refreshAuthz(sess);
     }
 
-    if (checkMfa &&
-        !AuthzResolverBlImpl.isMfaAuthorizedForAttribute(sess, attrDef, actionType, Arrays.asList(group, resource))) {
+    if (checkMfa && !AuthzResolverBlImpl.isMfaAuthorizedForAttribute(sess, attrDef, actionType,
+        Arrays.asList(group, resource))) {
       throw new MfaPrivilegeException("Multi-Factor authentication required");
     }
 
@@ -466,8 +1069,8 @@ public class AuthzResolver {
       refreshAuthz(sess);
     }
 
-    if (checkMfa &&
-        !AuthzResolverBlImpl.isMfaAuthorizedForAttribute(sess, attrDef, actionType, Arrays.asList(member, resource))) {
+    if (checkMfa && !AuthzResolverBlImpl.isMfaAuthorizedForAttribute(sess, attrDef, actionType,
+        Arrays.asList(member, resource))) {
       throw new MfaPrivilegeException("Multi-Factor authentication required");
     }
 
@@ -497,8 +1100,8 @@ public class AuthzResolver {
       refreshAuthz(sess);
     }
 
-    if (checkMfa &&
-        !AuthzResolverBlImpl.isMfaAuthorizedForAttribute(sess, attrDef, actionType, Arrays.asList(user, facility))) {
+    if (checkMfa && !AuthzResolverBlImpl.isMfaAuthorizedForAttribute(sess, attrDef, actionType,
+        Arrays.asList(user, facility))) {
       throw new MfaPrivilegeException("Multi-Factor authentication required");
     }
 
@@ -529,100 +1132,12 @@ public class AuthzResolver {
     }
 
     if (checkMfa &&
-        !AuthzResolverBlImpl.isMfaAuthorizedForAttribute(sess, attrDef, actionType, Arrays.asList(member, group))) {
+            !AuthzResolverBlImpl.isMfaAuthorizedForAttribute(sess, attrDef, actionType, Arrays.asList(member, group))) {
       throw new MfaPrivilegeException("Multi-Factor authentication required");
     }
 
     try {
       return AuthzResolverBlImpl.isAuthorizedForAttribute(sess, actionType, attrDef, member, group);
-    } catch (AttributeNotExistsException | WrongAttributeAssignmentException ex) {
-      throw new InternalErrorException(ex);
-    }
-  }
-
-  /**
-   * Checks if the principal is authorized to do some action of user attribute.
-   *
-   * @param sess       perun session
-   * @param actionType type of action on attribute
-   * @param attrDef    attribute what principal want to work with
-   * @param user       primary Bean of Attribute (can't be null)
-   * @param checkMfa   if true, checks also MFA rules and throws exception if unmet
-   * @return true if principal is authorized, false if not
-   * @throws MfaPrivilegeException thrown when checkMfa is true and MFA rules are unmet
-   */
-  public static boolean isAuthorizedForAttribute(PerunSession sess, AttributeAction actionType,
-                                                 AttributeDefinition attrDef, User user, boolean checkMfa)
-      throws InternalErrorException {
-    if (!sess.getPerunPrincipal().isAuthzInitialized()) {
-      refreshAuthz(sess);
-    }
-
-    if (checkMfa && !AuthzResolverBlImpl.isMfaAuthorizedForAttribute(sess, attrDef, actionType, Arrays.asList(user))) {
-      throw new MfaPrivilegeException("Multi-Factor authentication required");
-    }
-
-    try {
-      return AuthzResolverBlImpl.isAuthorizedForAttribute(sess, actionType, attrDef, user);
-    } catch (AttributeNotExistsException | WrongAttributeAssignmentException ex) {
-      throw new InternalErrorException(ex);
-    }
-  }
-
-  /**
-   * Checks if the principal is authorized to do some action of member attribute.
-   *
-   * @param sess       perun session
-   * @param actionType type of action on attribute
-   * @param attrDef    attribute what principal want to work with
-   * @param member     primary Bean of Attribute (can't be null)
-   * @param checkMfa   if true, checks also MFA rules and throws exception if unmet
-   * @return true if principal is authorized, false if not
-   * @throws MfaPrivilegeException thrown when checkMfa is true and MFA rules are unmet
-   */
-  public static boolean isAuthorizedForAttribute(PerunSession sess, AttributeAction actionType,
-                                                 AttributeDefinition attrDef, Member member, boolean checkMfa)
-      throws InternalErrorException {
-    if (!sess.getPerunPrincipal().isAuthzInitialized()) {
-      refreshAuthz(sess);
-    }
-
-    if (checkMfa &&
-        !AuthzResolverBlImpl.isMfaAuthorizedForAttribute(sess, attrDef, actionType, Arrays.asList(member))) {
-      throw new MfaPrivilegeException("Multi-Factor authentication required");
-    }
-
-    try {
-      return AuthzResolverBlImpl.isAuthorizedForAttribute(sess, actionType, attrDef, member);
-    } catch (AttributeNotExistsException | WrongAttributeAssignmentException ex) {
-      throw new InternalErrorException(ex);
-    }
-  }
-
-  /**
-   * Checks if the principal is authorized to do some action of vo attribute.
-   *
-   * @param sess       perun session
-   * @param actionType type of action on attribute
-   * @param attrDef    attribute what principal want to work with
-   * @param vo         primary Bean of Attribute (can't be null)
-   * @param checkMfa   if true, checks also MFA rules and throws exception if unmet
-   * @return true if principal is authorized, false if not
-   * @throws MfaPrivilegeException thrown when checkMfa is true and MFA rules are unmet
-   */
-  public static boolean isAuthorizedForAttribute(PerunSession sess, AttributeAction actionType,
-                                                 AttributeDefinition attrDef, Vo vo, boolean checkMfa)
-      throws InternalErrorException {
-    if (!sess.getPerunPrincipal().isAuthzInitialized()) {
-      refreshAuthz(sess);
-    }
-
-    if (checkMfa && !AuthzResolverBlImpl.isMfaAuthorizedForAttribute(sess, attrDef, actionType, Arrays.asList(vo))) {
-      throw new MfaPrivilegeException("Multi-Factor authentication required");
-    }
-
-    try {
-      return AuthzResolverBlImpl.isAuthorizedForAttribute(sess, actionType, attrDef, vo);
     } catch (AttributeNotExistsException | WrongAttributeAssignmentException ex) {
       throw new InternalErrorException(ex);
     }
@@ -672,6 +1187,96 @@ public class AuthzResolver {
   }
 
   /**
+   * Checks if the principal is authorized to do some action of vo attribute.
+   *
+   * @param sess       perun session
+   * @param actionType type of action on attribute
+   * @param attrDef    attribute what principal want to work with
+   * @param vo         primary Bean of Attribute (can't be null)
+   * @param checkMfa   if true, checks also MFA rules and throws exception if unmet
+   * @return true if principal is authorized, false if not
+   * @throws MfaPrivilegeException thrown when checkMfa is true and MFA rules are unmet
+   */
+  public static boolean isAuthorizedForAttribute(PerunSession sess, AttributeAction actionType,
+                                                 AttributeDefinition attrDef, Vo vo, boolean checkMfa)
+      throws InternalErrorException {
+    if (!sess.getPerunPrincipal().isAuthzInitialized()) {
+      refreshAuthz(sess);
+    }
+
+    if (checkMfa && !AuthzResolverBlImpl.isMfaAuthorizedForAttribute(sess, attrDef, actionType,
+        Collections.singletonList(vo))) {
+      throw new MfaPrivilegeException("Multi-Factor authentication required");
+    }
+
+    try {
+      return AuthzResolverBlImpl.isAuthorizedForAttribute(sess, actionType, attrDef, vo);
+    } catch (AttributeNotExistsException | WrongAttributeAssignmentException ex) {
+      throw new InternalErrorException(ex);
+    }
+  }
+
+  /**
+   * Checks if the principal is authorized to do some action of user attribute.
+   *
+   * @param sess       perun session
+   * @param actionType type of action on attribute
+   * @param attrDef    attribute what principal want to work with
+   * @param user       primary Bean of Attribute (can't be null)
+   * @param checkMfa   if true, checks also MFA rules and throws exception if unmet
+   * @return true if principal is authorized, false if not
+   * @throws MfaPrivilegeException thrown when checkMfa is true and MFA rules are unmet
+   */
+  public static boolean isAuthorizedForAttribute(PerunSession sess, AttributeAction actionType,
+                                                 AttributeDefinition attrDef, User user, boolean checkMfa)
+      throws InternalErrorException {
+    if (!sess.getPerunPrincipal().isAuthzInitialized()) {
+      refreshAuthz(sess);
+    }
+
+    if (checkMfa && !AuthzResolverBlImpl.isMfaAuthorizedForAttribute(sess, attrDef, actionType,
+        Collections.singletonList(user))) {
+      throw new MfaPrivilegeException("Multi-Factor authentication required");
+    }
+
+    try {
+      return AuthzResolverBlImpl.isAuthorizedForAttribute(sess, actionType, attrDef, user);
+    } catch (AttributeNotExistsException | WrongAttributeAssignmentException ex) {
+      throw new InternalErrorException(ex);
+    }
+  }
+
+  /**
+   * Checks if the principal is authorized to do some action of member attribute.
+   *
+   * @param sess       perun session
+   * @param actionType type of action on attribute
+   * @param attrDef    attribute what principal want to work with
+   * @param member     primary Bean of Attribute (can't be null)
+   * @param checkMfa   if true, checks also MFA rules and throws exception if unmet
+   * @return true if principal is authorized, false if not
+   * @throws MfaPrivilegeException thrown when checkMfa is true and MFA rules are unmet
+   */
+  public static boolean isAuthorizedForAttribute(PerunSession sess, AttributeAction actionType,
+                                                 AttributeDefinition attrDef, Member member, boolean checkMfa)
+      throws InternalErrorException {
+    if (!sess.getPerunPrincipal().isAuthzInitialized()) {
+      refreshAuthz(sess);
+    }
+
+    if (checkMfa && !AuthzResolverBlImpl.isMfaAuthorizedForAttribute(sess, attrDef, actionType,
+        Collections.singletonList(member))) {
+      throw new MfaPrivilegeException("Multi-Factor authentication required");
+    }
+
+    try {
+      return AuthzResolverBlImpl.isAuthorizedForAttribute(sess, actionType, attrDef, member);
+    } catch (AttributeNotExistsException | WrongAttributeAssignmentException ex) {
+      throw new InternalErrorException(ex);
+    }
+  }
+
+  /**
    * Checks if the principal is authorized to do some action of group attribute.
    *
    * @param sess       perun session
@@ -689,7 +1294,8 @@ public class AuthzResolver {
       refreshAuthz(sess);
     }
 
-    if (checkMfa && !AuthzResolverBlImpl.isMfaAuthorizedForAttribute(sess, attrDef, actionType, Arrays.asList(group))) {
+    if (checkMfa && !AuthzResolverBlImpl.isMfaAuthorizedForAttribute(sess, attrDef, actionType,
+        Collections.singletonList(group))) {
       throw new MfaPrivilegeException("Multi-Factor authentication required");
     }
 
@@ -718,8 +1324,8 @@ public class AuthzResolver {
       refreshAuthz(sess);
     }
 
-    if (checkMfa &&
-        !AuthzResolverBlImpl.isMfaAuthorizedForAttribute(sess, attrDef, actionType, Arrays.asList(resource))) {
+    if (checkMfa && !AuthzResolverBlImpl.isMfaAuthorizedForAttribute(sess, attrDef, actionType,
+        Collections.singletonList(resource))) {
       throw new MfaPrivilegeException("Multi-Factor authentication required");
     }
 
@@ -748,8 +1354,8 @@ public class AuthzResolver {
       refreshAuthz(sess);
     }
 
-    if (checkMfa &&
-        !AuthzResolverBlImpl.isMfaAuthorizedForAttribute(sess, attrDef, actionType, Arrays.asList(facility))) {
+    if (checkMfa && !AuthzResolverBlImpl.isMfaAuthorizedForAttribute(sess, attrDef, actionType,
+        Collections.singletonList(facility))) {
       throw new MfaPrivilegeException("Multi-Factor authentication required");
     }
 
@@ -778,7 +1384,8 @@ public class AuthzResolver {
       refreshAuthz(sess);
     }
 
-    if (checkMfa && !AuthzResolverBlImpl.isMfaAuthorizedForAttribute(sess, attrDef, actionType, Arrays.asList(host))) {
+    if (checkMfa && !AuthzResolverBlImpl.isMfaAuthorizedForAttribute(sess, attrDef, actionType,
+        Collections.singletonList(host))) {
       throw new MfaPrivilegeException("Multi-Factor authentication required");
     }
 
@@ -807,7 +1414,8 @@ public class AuthzResolver {
       refreshAuthz(sess);
     }
 
-    if (checkMfa && !AuthzResolverBlImpl.isMfaAuthorizedForAttribute(sess, attrDef, actionType, Arrays.asList(ues))) {
+    if (checkMfa && !AuthzResolverBlImpl.isMfaAuthorizedForAttribute(sess, attrDef, actionType,
+        Collections.singletonList(ues))) {
       throw new MfaPrivilegeException("Multi-Factor authentication required");
     }
 
@@ -836,7 +1444,7 @@ public class AuthzResolver {
       refreshAuthz(sess);
     }
 
-    if (checkMfa && !AuthzResolverBlImpl.isMfaAuthorizedForAttribute(sess, attrDef, actionType, Arrays.asList())) {
+    if (checkMfa && !AuthzResolverBlImpl.isMfaAuthorizedForAttribute(sess, attrDef, actionType, List.of())) {
       throw new MfaPrivilegeException("Multi-Factor authentication required");
     }
 
@@ -847,31 +1455,14 @@ public class AuthzResolver {
     }
   }
 
-
   /**
-   * Checks if the principal is authorized.
+   * Returns true if the perun principal inside the perun session is facility admin.
    *
    * @param sess perun session
-   * @param role required role
-   * @return true if the principal authorized, false otherwise
-   * @throws InternalErrorException if something goes wrong
+   * @return true if the perun principal is facility admin.
    */
-  @Deprecated
-  public static boolean isAuthorized(PerunSession sess, String role) {
-    if (!roleExists(role)) {
-      throw new InternalErrorException("Role: " + role + " does not exists.");
-    }
-    return AuthzResolverBlImpl.isAuthorized(sess, role);
-  }
-
-  /**
-   * Returns true if the perun principal inside the perun session is vo admin.
-   *
-   * @param sess perun session
-   * @return true if the perun principal is vo admin
-   */
-  public static boolean isVoAdmin(PerunSession sess) {
-    return AuthzResolverBlImpl.isVoAdmin(sess);
+  public static boolean isFacilityAdmin(PerunSession sess) {
+    return AuthzResolverBlImpl.isFacilityAdmin(sess);
   }
 
   /**
@@ -885,56 +1476,6 @@ public class AuthzResolver {
   }
 
   /**
-   * Returns true if the perun principal inside the perun session is facility admin.
-   *
-   * @param sess perun session
-   * @return true if the perun principal is facility admin.
-   */
-  public static boolean isFacilityAdmin(PerunSession sess) {
-    return AuthzResolverBlImpl.isFacilityAdmin(sess);
-  }
-
-//	/**
-//	 * Returns true if the perun principal inside the perun session is resource admin.
-//	 *
-//	 * @param sess perun session
-//	 * @return true if the perun principal is resource admin.
-//	 */
-//	public static boolean isResourceAdmin(PerunSession sess) {
-//		return AuthzResolverBlImpl.isResourceAdmin(sess);
-//	}
-//
-//	/**
-//	 * Returns true if the perun principal inside the perun session is security admin.
-//	 *
-//	 * @param sess perun session
-//	 * @return true if the perun principal is security admin.
-//	 */
-//	public static boolean isSecurityAdmin(PerunSession sess) {
-//		return AuthzResolverBlImpl.isSecurityAdmin(sess);
-//	}
-//
-//	/**
-//	 * Returns true if the perun principal inside the perun session is vo observer.
-//	 *
-//	 * @param sess perun session
-//	 * @return true if the perun principal is vo observer
-//	 */
-//	public static boolean isVoObserver(PerunSession sess) {
-//		return AuthzResolverBlImpl.isVoObserver(sess);
-//	}
-//
-//	/**
-//	 * Returns true if the perun principal inside the perun session is top group creator.
-//	 *
-//	 * @param sess perun session
-//	 * @return true if the perun principal is top group creator.
-//	 */
-//	public static boolean isTopGroupCreator(PerunSession sess) {
-//		return AuthzResolverBlImpl.isTopGroupCreator(sess);
-//	}
-
-  /**
    * Returns true if the perun principal inside the perun session is perun admin.
    *
    * @param sess perun session
@@ -945,208 +1486,89 @@ public class AuthzResolver {
   }
 
   /**
-   * Get all principal role names.
+   * Returns true if the perun principal inside the perun session is vo admin.
    *
    * @param sess perun session
-   * @return list of strings, which represents roles.
+   * @return true if the perun principal is vo admin
    */
-  public static List<String> getPrincipalRoleNames(PerunSession sess) {
-    return AuthzResolverBlImpl.getPrincipalRoleNames(sess);
+  public static boolean isVoAdmin(PerunSession sess) {
+    return AuthzResolverBlImpl.isVoAdmin(sess);
   }
 
   /**
-   * Get all user role names. Does not include membership and sponsorship role.
+   * Load perun roles and policies from the configuration file perun-roles.yml. Roles are loaded to the database and
+   * policies are loaded to the PerunPoliciesContainer.
+   *
+   * @throws PrivilegeException when the principal is not authorized.
+   */
+  public static void loadAuthorizationComponents(PerunSession sess) throws PrivilegeException {
+    Utils.checkPerunSession(sess);
+
+    //Authorization
+    if (!authorizedInternal(sess, "loadAuthorizationComponents_policy")) {
+      throw new PrivilegeException(sess, "loadAuthorizationComponents");
+    }
+
+    AuthzResolverBlImpl.loadAuthorizationComponents();
+  }
+
+  /**
+   * Removes all existing roles for the perunPrincipal and call init again.
    *
    * @param sess perun session
-   * @param user User
-   * @return list of strings, which represents roles.
    */
-  public static List<String> getUserRoleNames(PerunSession sess, User user)
-      throws UserNotExistsException, PrivilegeException {
+  public static void refreshAuthz(PerunSession sess) {
+    AuthzResolverBlImpl.refreshAuthz(sess);
+  }
+
+  /**
+   * Calls UserInfo endpoint to obtain the newest information on performed MFA. Requires access token and issuer to be
+   * stored in the additionalInformations. If user used MFA to log in (MFA acr is returned from the endpoint), endpoint
+   * returns MFA timestamp. This method stores the timestamp into principal's additionalInformations.
+   *
+   * @param sess perun session with required additionalInformation in Principal
+   * @throws ExpiredTokenException     expired access token
+   * @throws MFAuthenticationException wrong configuration or missing required information
+   * @throws PrivilegeException        unauthorized
+   */
+  public static void refreshMfa(PerunSession sess)
+      throws ExpiredTokenException, MFAuthenticationException, PrivilegeException {
     Utils.checkPerunSession(sess);
-    ((PerunBl) sess.getPerun()).getUsersManagerBl().checkUserExists(sess, user);
 
     //Authorization
-    if (!authorizedInternal(sess, "getUserRoleNames_User_policy")) {
-      throw new PrivilegeException("getUserRoleNames.");
+    if (!authorizedInternal(sess, "refreshMfa_policy", sess.getPerunPrincipal().getUser())) {
+      throw new PrivilegeException(sess, "refreshMfa");
     }
 
-    return AuthzResolverBlImpl.getUserRoleNames(sess, user);
+    AuthzResolverBlImpl.refreshMfa(sess);
   }
 
   /**
-   * Returns user's direct roles, can also include roles resulting from being a VALID member of authorized groups.
-   * Returns also sponsorship and membership roles.
+   * Check if the given role exists in the database. Check is case insensitive.
    *
-   * @param sess                         perun session
-   * @param userId                       id of a user
-   * @param getAuthorizedGroupBasedRoles include roles based on membership in authorized groups
-   * @return AuthzRoles object which contains all roles with perunbeans
-   * @throws InternalErrorException
-   * @throws UserNotExistsException
+   * @param role which will be checked
+   * @return true if role exists, false otherwise.
    */
-  public static AuthzRoles getUserRoles(PerunSession sess, int userId, boolean getAuthorizedGroupBasedRoles)
-      throws UserNotExistsException, PrivilegeException {
-    Utils.checkPerunSession(sess);
-    User user = ((PerunBl) sess.getPerun()).getUsersManagerBl().getUserById(sess, userId);
-
-    //Authorization
-    if (!authorizedInternal(sess, "getUserRoles_int_boolean_policy", user)) {
-      throw new PrivilegeException("getUserRoles.");
-    }
-
-    return AuthzResolverBlImpl.getUserRoles(sess, user, getAuthorizedGroupBasedRoles);
+  public static boolean roleExists(String role) {
+    return AuthzResolverBlImpl.roleExists(role);
   }
 
   /**
-   * Returns map of role name and map of corresponding role complementary objects (perun beans) distinguished by type.
-   * * together with list of authorized groups where user is member:
-   * *     Map< RoleName, Map< BeanName, Map< BeanID, List<AuthzGroup> >>>
+   * Check if the principal is the owner of the application.
    *
-   * @param sess   perun session
-   * @param userId id of a user
-   * @return Map<String, Map < String, Map < Integer, List < Group>>>> roles with map of complementary objects with associated authorized groups
+   * @param sess PerunSession which contains the principal.
+   * @param app  application which principal wants to access
+   * @return true if the principal has particular rights, false otherwise.
    */
-  public static Map<String, Map<String, Map<Integer, List<Group>>>> getRoleComplementaryObjectsWithAuthorizedGroups(
-      PerunSession sess, int userId) throws UserNotExistsException, PrivilegeException {
-    Utils.checkPerunSession(sess);
-    User user = ((PerunBl) sess.getPerun()).getUsersManagerBl().getUserById(sess, userId);
-
-    //Authorization
-    if (!authorizedInternal(sess, "getRoleComplementaryObjectsWithAuthorizedGroups_int_policy", user)) {
-      throw new PrivilegeException("getRoleComplementaryObjectsWithAuthorizedGroups.");
-    }
-
-    return AuthzResolverBlImpl.getRoleComplementaryObjectsWithAuthorizedGroups(sess, user);
-  }
-
-  /**
-   * Returns user's roles resulting from being a VALID member of authorized groups.
-   *
-   * @param sess   perun session
-   * @param userId id of a user
-   * @return AuthzRoles object which contains roles with perunbeans
-   * @throws InternalErrorException
-   */
-  public static AuthzRoles getRolesObtainedFromAuthorizedGroupMemberships(PerunSession sess, int userId)
-      throws UserNotExistsException, PrivilegeException {
-    Utils.checkPerunSession(sess);
-    User user = ((PerunBl) sess.getPerun()).getUsersManagerBl().getUserById(sess, userId);
-
-    //Authorization
-    if (!authorizedInternal(sess, "getRolesObtainedFromAuthorizedGroupMemberships_int_policy", user)) {
-      throw new PrivilegeException("getRolesObtainedFromAuthorizedGroupMemberships.");
-    }
-
-    return AuthzResolverBlImpl.getRolesObtainedFromAuthorizedGroupMemberships(sess, user);
-  }
-
-  /**
-   * Get all group role names.
-   *
-   * @param sess  perun session
-   * @param group Group
-   * @return list of strings, which represents roles.
-   * @throws InternalErrorException
-   * @throws GroupNotExistsException
-   */
-  public static List<String> getGroupRoleNames(PerunSession sess, Group group)
-      throws GroupNotExistsException, PrivilegeException {
-    Utils.checkPerunSession(sess);
-    ((PerunBl) sess.getPerun()).getGroupsManagerBl().checkGroupExists(sess, group);
-
-    //Authorization
-    if (!authorizedInternal(sess, "getGroupRoleNames_Group_policy")) {
-      throw new PrivilegeException("getGroupRoleNames.");
-    }
-
-    return cz.metacentrum.perun.core.blImpl.AuthzResolverBlImpl.getGroupRoleNames(sess, group);
-  }
-
-  /**
-   * Get all roles for a given group.
-   *
-   * @param sess    perun session
-   * @param groupId id of a group
-   * @return AuthzRoles object which contains all roles with perunbeans
-   * @throws InternalErrorException
-   * @throws GroupNotExistsException
-   */
-  public static AuthzRoles getGroupRoles(PerunSession sess, int groupId)
-      throws GroupNotExistsException, PrivilegeException {
-    Utils.checkPerunSession(sess);
-    Group group = ((PerunBl) sess.getPerun()).getGroupsManagerBl().getGroupById(sess, groupId);
-
-    //Authorization
-    if (!authorizedInternal(sess, "getGroupRoles_int_policy")) {
-      throw new PrivilegeException("getGroupRoles.");
-    }
-
-    return AuthzResolverBlImpl.getGroupRoles(sess, group);
-  }
-
-  /**
-   * Returns user which is associated with credentials used to log-in to Perun.
-   *
-   * @param sess perun session
-   * @return currently logged user
-   */
-  public static User getLoggedUser(PerunSession sess) {
-    return AuthzResolverBlImpl.getLoggedUser(sess);
-  }
-
-  /**
-   * Returns true if the perunPrincipal has requested role.
-   *
-   * @param perunPrincipal acting person for whom the role is checked
-   * @param role           role to be checked
-   */
-  public static boolean hasRole(PerunPrincipal perunPrincipal, String role) {
-    if (!roleExists(role)) {
-      throw new InternalErrorException("Role: " + role + " does not exists.");
-    }
-    return AuthzResolverBlImpl.hasRole(perunPrincipal, role);
-  }
-
-  /**
-   * Check whether the principal is authorized to manage the role on the object.
-   *
-   * @param sess                principal's perun session
-   * @param complementaryObject bounded with the role
-   * @param role                which will be managed
-   * @return
-   * @throws RoleManagementRulesNotExistsException when the role does not have the management rules.
-   */
-  public static boolean authorizedToManageRole(PerunSession sess, PerunBean complementaryObject, String role)
-      throws RoleManagementRulesNotExistsException {
-    if (!roleExists(role)) {
-      throw new InternalErrorException("Role: " + role + " does not exists.");
-    }
-    return AuthzResolverBlImpl.authorizedToManageRole(sess, complementaryObject, role);
-  }
-
-  /**
-   * Check whether the principal is authorized to read the role on the object.
-   *
-   * @param sess                principal's perun session
-   * @param complementaryObject bounded with the role
-   * @param role                which will be read
-   * @return
-   * @throws RoleManagementRulesNotExistsException when the role does not have the management rules.
-   */
-  public static boolean authorizedToReadRole(PerunSession sess, PerunBean complementaryObject, String role)
-      throws RoleManagementRulesNotExistsException {
-    if (!roleExists(role)) {
-      throw new InternalErrorException("Role: " + role + " does not exists.");
-    }
-    return AuthzResolverBlImpl.authorizedToReadRole(sess, complementaryObject, role);
+  public static boolean selfAuthorizedForApplication(PerunSession sess, Application app) {
+    return AuthzResolverBlImpl.selfAuthorizedForApplication(sess, app);
   }
 
   /**
    * Set role for user and <b>all</b> complementary objects.
    * <p>
-   * If some complementary object is wrong for the role, throw an exception.
-   * For role "PERUNADMIN" ignore complementary objects.
+   * If some complementary object is wrong for the role, throw an exception. For role "PERUNADMIN" ignore complementary
+   * objects.
    *
    * @param sess                 perun session
    * @param user                 the user for setting role
@@ -1166,8 +1588,8 @@ public class AuthzResolver {
   /**
    * Set role for user and <b>one</b> complementary object.
    * <p>
-   * If complementary object is wrong for the role, throw an exception.
-   * For role "PERUNADMIN" ignore complementary object.
+   * If complementary object is wrong for the role, throw an exception. For role "PERUNADMIN" ignore complementary
+   * object.
    *
    * @param sess                perun session
    * @param user                the user for setting role
@@ -1197,8 +1619,8 @@ public class AuthzResolver {
   /**
    * Set role for auhtorizedGroup and <b>all</b> complementary objects.
    * <p>
-   * If some complementary object is wrong for the role, throw an exception.
-   * For role "PERUNADMIN" ignore complementary objects.
+   * If some complementary object is wrong for the role, throw an exception. For role "PERUNADMIN" ignore complementary
+   * objects.
    *
    * @param sess                 perun session
    * @param authorizedGroup      the group for setting role
@@ -1220,8 +1642,8 @@ public class AuthzResolver {
   /**
    * Set role for authorizedGroup and <b>one</b> complementary object.
    * <p>
-   * If complementary object is wrong for the role, throw an exception.
-   * For role "PERUNADMIN" ignore complementary object.
+   * If complementary object is wrong for the role, throw an exception. For role "PERUNADMIN" ignore complementary
+   * object.
    *
    * @param sess                perun session
    * @param authorizedGroup     the group for setting role
@@ -1250,8 +1672,8 @@ public class AuthzResolver {
   /**
    * Set role for authorizedGroups and <b>one</b> complementary object.
    * <p>
-   * If complementary object is wrong for the role, throw an exception.
-   * For role "PERUNADMIN" ignore complementary object.
+   * If complementary object is wrong for the role, throw an exception. For role "PERUNADMIN" ignore complementary
+   * object.
    *
    * @param sess                perun session
    * @param authorizedGroups    the groups for setting role
@@ -1277,8 +1699,8 @@ public class AuthzResolver {
   /**
    * Set role for given users and <b>one</b> complementary object.
    * <p>
-   * If complementary object is wrong for the role, throw an exception.
-   * For role "PERUNADMIN" ignore complementary object.
+   * If complementary object is wrong for the role, throw an exception. For role "PERUNADMIN" ignore complementary
+   * object.
    *
    * @param sess                perun session
    * @param users               users for which the given role is set
@@ -1303,8 +1725,8 @@ public class AuthzResolver {
   /**
    * Set role for authorizedGroups and <b>one</b> complementary object.
    * <p>
-   * If complementary object is wrong for the role, throw an exception.
-   * For role "PERUNADMIN" ignore complementary object.
+   * If complementary object is wrong for the role, throw an exception. For role "PERUNADMIN" ignore complementary
+   * object.
    *
    * @param sess                perun session
    * @param authorizedGroups    the groups for setting role
@@ -1328,111 +1750,10 @@ public class AuthzResolver {
   }
 
   /**
-   * Set role for given users and <b>one</b> complementary object.
-   * <p>
-   * If complementary object is wrong for the role, throw an exception.
-   * For role "PERUNADMIN" ignore complementary object.
-   *
-   * @param sess                perun session
-   * @param users               users for which the given role is set
-   * @param role                desired role
-   * @param complementaryObject object for which the role is set
-   * @throws UserNotExistsException if any of the given users is not found
-   * @throws PrivilegeException     insufficient permissions
-   * @throws UserNotAdminException  if any of the given users is not admin
-   * @throws InternalErrorException internal error
-   */
-  public static void unsetRole(PerunSession sess, List<User> users, String role, PerunBean complementaryObject)
-      throws UserNotExistsException, PrivilegeException, UserNotAdminException, RoleCannotBeManagedException {
-    if (!roleExists(role)) {
-      throw new InternalErrorException("Role: " + role + " does not exists.");
-    }
-
-    for (User user : users) {
-      unsetRole(sess, user, complementaryObject, role);
-    }
-  }
-
-  /**
-   * Unset role for user and <b>all</b> complementary objects
-   * <p>
-   * If some complementary object is wrong for the role, throw an exception.
-   * For role "PERUNADMIN" ignore complementary objects.
-   *
-   * @param sess                 perun session
-   * @param user                 the user for unsetting role
-   * @param role                 role of user in a session
-   * @param complementaryObjects objects for which role will be unset
-   */
-  public static void unsetRole(PerunSession sess, User user, String role, List<PerunBean> complementaryObjects)
-      throws PrivilegeException, UserNotExistsException, UserNotAdminException, RoleCannotBeManagedException {
-    if (!roleExists(role)) {
-      throw new InternalErrorException("Role: " + role + " does not exists.");
-    }
-
-    for (PerunBean complementaryObject : complementaryObjects) {
-      unsetRole(sess, user, complementaryObject, role);
-    }
-  }
-
-  /**
-   * Unset role for user and <b>one</b> complementary object.
-   * <p>
-   * If complementary object is wrong for the role, throw an exception.
-   * For role "PERUNADMIN" ignore complementary object.
-   *
-   * @param sess                perun session
-   * @param user                the user for unsetting role
-   * @param role                role of user in a session
-   * @param complementaryObject object for which role will be unset
-   */
-  public static void unsetRole(PerunSession sess, User user, PerunBean complementaryObject, String role)
-      throws PrivilegeException, UserNotExistsException, UserNotAdminException, RoleCannotBeManagedException {
-    Utils.notNull(role, "role");
-    if (!roleExists(role)) {
-      throw new InternalErrorException("Role: " + role + " does not exists.");
-    }
-    ((PerunBl) sess.getPerun()).getUsersManagerBl().checkUserExists(sess, user);
-
-    try {
-      if (!authorizedToManageRole(sess, complementaryObject, role)) {
-        throw new PrivilegeException("You are not privileged to use the method unsetRole.");
-      }
-    } catch (RoleManagementRulesNotExistsException e) {
-      throw new InternalErrorException("Management rules not exist for the role " + role, e);
-    }
-
-    AuthzResolverBlImpl.unsetRole(sess, user, complementaryObject, role);
-  }
-
-  /**
-   * Unset role for group and <b>all</b> complementary objects
-   * <p>
-   * If some complementary object is wrong for the role, throw an exception.
-   * For role "PERUNADMIN" ignore complementary objects.
-   *
-   * @param sess                 perun session
-   * @param authorizedGroup      the group for unsetting role
-   * @param role                 role of user in a session
-   * @param complementaryObjects objects for which role will be unset
-   */
-  public static void unsetRole(PerunSession sess, Group authorizedGroup, String role,
-                               List<PerunBean> complementaryObjects)
-      throws PrivilegeException, GroupNotExistsException, GroupNotAdminException, RoleCannotBeManagedException {
-    if (!roleExists(role)) {
-      throw new InternalErrorException("Role: " + role + " does not exists.");
-    }
-
-    for (PerunBean complementaryObject : complementaryObjects) {
-      unsetRole(sess, authorizedGroup, complementaryObject, role);
-    }
-  }
-
-  /**
    * Unset role for group and <b>one</b> complementary object
    * <p>
-   * If some complementary object is wrong for the role, throw an exception.
-   * For role "PERUNADMIN" ignore complementary object.
+   * If some complementary object is wrong for the role, throw an exception. For role "PERUNADMIN" ignore complementary
+   * object.
    *
    * @param sess                perun session
    * @param authorizedGroup     the group for unsetting role
@@ -1459,419 +1780,103 @@ public class AuthzResolver {
   }
 
   /**
-   * Get all valid richUser administrators (for group-based rights, status must be VALID for both Vo and group) for complementary object and role with specified attributes.
+   * Set role for given users and <b>one</b> complementary object.
    * <p>
-   * If <b>onlyDirectAdmins</b> is <b>true</b>, return only direct users of the complementary object for role with specific attributes.
-   * If <b>allUserAttributes</b> is <b>true</b>, do not specify attributes through list and return them all in objects richUser. Ignoring list of specific attributes.
+   * If complementary object is wrong for the role, throw an exception. For role "PERUNADMIN" ignore complementary
+   * object.
    *
    * @param sess                perun session
-   * @param complementaryObject for which we will get administrator
-   * @param specificAttributes  list of specified attributes which are needed in object richUser
-   * @param role                expected role to filter managers by
-   * @param onlyDirectAdmins    if true, get only direct user administrators (if false, get both direct and indirect)
-   * @param allUserAttributes   if true, get all possible user attributes and ignore list of specificAttributes (if false, get only specific attributes)
-   * @return list of richUser administrators for complementary object and role with specified attributes.
-   */
-  public static List<RichUser> getRichAdmins(PerunSession sess, PerunBean complementaryObject,
-                                             List<String> specificAttributes, String role, boolean onlyDirectAdmins,
-                                             boolean allUserAttributes)
-      throws PrivilegeException, RoleCannotBeManagedException {
-    Utils.checkPerunSession(sess);
-    Utils.notNull(role, "role");
-    Utils.notNull(complementaryObject, "complementaryObject");
-
-    if (!roleExists(role)) {
-      throw new InternalErrorException("Role: " + role + " does not exists.");
-    }
-
-    // Authorization
-    try {
-      if (!authorizedToReadRole(sess, complementaryObject, role)) {
-        throw new PrivilegeException("You are not privileged to use the method getRichAdmins.");
-      }
-    } catch (RoleManagementRulesNotExistsException e) {
-      throw new InternalErrorException("Management rules not exist for the role " + role, e);
-    }
-
-    return AuthzResolverBlImpl.getRichAdmins(sess, complementaryObject, specificAttributes, role, onlyDirectAdmins,
-        allUserAttributes);
-  }
-
-  /**
-   * Get all valid user administrators (for group-based rights, status must be VALID for both Vo and group) for complementary object and role.
-   * <p>
-   * If <b>onlyDirectAdmins</b> is <b>true</b>, return only direct users of the complementary object for role.
-   *
-   * @param sess                perun session
-   * @param complementaryObject for which we will get administrator
-   * @param role                expected role to filter managers by
-   * @param onlyDirectAdmins    if true, get only direct user administrators (if false, get both direct and indirect)
-   * @return list of user administrators for complementary object and role.
-   */
-  public static List<User> getAdmins(PerunSession sess, PerunBean complementaryObject, String role,
-                                     boolean onlyDirectAdmins) throws PrivilegeException, RoleCannotBeManagedException {
-    Utils.checkPerunSession(sess);
-    Utils.notNull(role, "role");
-    Utils.notNull(complementaryObject, "complementaryObject");
-
-    if (!roleExists(role)) {
-      throw new InternalErrorException("Role: " + role + " does not exists.");
-    }
-
-    // Authorization
-    try {
-      if (!authorizedToReadRole(sess, complementaryObject, role)) {
-        throw new PrivilegeException("You are not privileged to use the method getRichAdmins.");
-      }
-    } catch (RoleManagementRulesNotExistsException e) {
-      throw new InternalErrorException("Management rules not exist for the role " + role, e);
-    }
-
-    return AuthzResolverBlImpl.getAdmins(sess, complementaryObject, role, onlyDirectAdmins);
-  }
-
-  /**
-   * Get all authorizedGroups for complementary object and role.
-   *
-   * @param sess                perun session
-   * @param complementaryObject for which we will get administrator groups
-   * @param role                expected role to filter authorizedGroups by
-   * @return list of authorizedGroups for complementary object and role
-   */
-  public static List<Group> getAdminGroups(PerunSession sess, PerunBean complementaryObject, String role)
-      throws PrivilegeException, RoleCannotBeManagedException {
-    Utils.checkPerunSession(sess);
-    Utils.notNull(role, "role");
-    Utils.notNull(complementaryObject, "complementaryObject");
-
-    if (!roleExists(role)) {
-      throw new InternalErrorException("Role: " + role + " does not exists.");
-    }
-
-    // Authorization
-    try {
-      if (!authorizedToReadRole(sess, complementaryObject, role)) {
-        throw new PrivilegeException("You are not privileged to use the method getAdminGroups.");
-      }
-    } catch (RoleManagementRulesNotExistsException e) {
-      throw new InternalErrorException("Management rules not exist for the role " + role, e);
-    }
-
-    return AuthzResolverBlImpl.getAdminGroups(complementaryObject, role);
-  }
-
-  /**
-   * Returns PerunPrincipal object associated with current session. It contains necessary information,
-   * including user identification, authorization and metadata. Each call of this method refresh the
-   * session including authorization data.
-   *
-   * @param sess perun session
-   * @return perunPrincipal object
-   * @throws InternalErrorException if the PerunSession is not valid.
-   */
-  public static PerunPrincipal getPerunPrincipal(PerunSession sess) {
-    return AuthzResolverBlImpl.getPerunPrincipal(sess);
-  }
-
-  /**
-   * Returns all complementary objects for defined role.
-   *
-   * @param sess perun session
-   * @param role to get object for
-   * @return list of complementary objects
-   */
-  public static List<PerunBean> getComplementaryObjectsForRole(PerunSession sess, String role) {
-    if (!roleExists(role)) {
-      throw new InternalErrorException("Role: " + role + " does not exists.");
-    }
-    return AuthzResolverBlImpl.getComplementaryObjectsForRole(sess, role);
-  }
-
-  /**
-   * Returns complementary objects for defined role filtered by particular class, e.g. Vo, Group, ...
-   *
-   * @param sess           perun session
-   * @param role           to get object for
-   * @param perunBeanClass particular class ( Vo | Group | ... )
-   * @return list of complementary objects
-   */
-  public static List<PerunBean> getComplementaryObjectsForRole(PerunSession sess, String role, Class perunBeanClass) {
-    if (!roleExists(role)) {
-      throw new InternalErrorException("Role: " + role + " does not exists.");
-    }
-    return AuthzResolverBlImpl.getComplementaryObjectsForRole(sess, role, perunBeanClass);
-  }
-
-  /**
-   * Removes all existing roles for the perunPrincipal and call init again.
-   *
-   * @param sess perun session
-   */
-  public static void refreshAuthz(PerunSession sess) {
-    AuthzResolverBlImpl.refreshAuthz(sess);
-  }
-
-  /**
-   * Calls UserInfo endpoint to obtain the newest information on performed MFA.
-   * Requires access token and issuer to be stored in the additionalInformations.
-   * If user used MFA to log in (MFA acr is returned from the endpoint), endpoint returns MFA timestamp.
-   * This method stores the timestamp into principal's additionalInformations.
-   *
-   * @param sess perun session with required additionalInformation in Principal
-   * @throws ExpiredTokenException     expired access token
-   * @throws MFAuthenticationException wrong configuration or missing required information
-   * @throws PrivilegeException        unauthorized
-   */
-  public static void refreshMfa(PerunSession sess)
-      throws ExpiredTokenException, MFAuthenticationException, PrivilegeException {
-    Utils.checkPerunSession(sess);
-
-    //Authorization
-    if (!authorizedInternal(sess, "refreshMfa_policy", sess.getPerunPrincipal().getUser())) {
-      throw new PrivilegeException(sess, "refreshMfa");
-    }
-
-    AuthzResolverBlImpl.refreshMfa(sess);
-  }
-
-  /**
-   * This methods verifies if the current principal has one of the given roles for the given object.
-   *
-   * @param sess                session
-   * @param complementaryObject complementary object
-   * @param allowedRoles        set of roles which are tested
-   * @return true, if the principal is authorized, false otherwise
+   * @param users               users for which the given role is set
+   * @param role                desired role
+   * @param complementaryObject object for which the role is set
+   * @throws UserNotExistsException if any of the given users is not found
+   * @throws PrivilegeException     insufficient permissions
+   * @throws UserNotAdminException  if any of the given users is not admin
    * @throws InternalErrorException internal error
    */
-  public static boolean hasOneOfTheRolesForObject(PerunSession sess, PerunBean complementaryObject,
-                                                  Set<String> allowedRoles) {
-    if (allowedRoles == null) {
-      throw new InternalErrorException("Unsupported role.");
-    }
-    for (String allowedRole : allowedRoles) {
-      if (!roleExists(allowedRole)) {
-        throw new InternalErrorException("Role: " + allowedRole + " does not exists.");
-      }
-      if (isAuthorized(sess, allowedRole, complementaryObject)) {
-        return true;
-      }
-    }
-    return false;
-  }
-
-  /**
-   * Check if the given role exists in the database.
-   * Check is case insensitive.
-   *
-   * @param role which will be checked
-   * @return true if role exists, false otherwise.
-   */
-  public static boolean roleExists(String role) {
-    return AuthzResolverBlImpl.roleExists(role);
-  }
-
-  /**
-   * Load perun roles and policies from the configuration file perun-roles.yml.
-   * Roles are loaded to the database and policies are loaded to the PerunPoliciesContainer.
-   *
-   * @throws PrivilegeException when the principal is not authorized.
-   */
-  public static void loadAuthorizationComponents(PerunSession sess) throws PrivilegeException {
-    Utils.checkPerunSession(sess);
-
-    //Authorization
-    if (!authorizedInternal(sess, "loadAuthorizationComponents_policy")) {
-      throw new PrivilegeException(sess, "loadAuthorizationComponents");
+  public static void unsetRole(PerunSession sess, List<User> users, String role, PerunBean complementaryObject)
+      throws UserNotExistsException, PrivilegeException, UserNotAdminException, RoleCannotBeManagedException {
+    if (!roleExists(role)) {
+      throw new InternalErrorException("Role: " + role + " does not exists.");
     }
 
-    AuthzResolverBlImpl.loadAuthorizationComponents();
-  }
-
-  /**
-   * Return all loaded perun policies.
-   *
-   * @return all loaded policies
-   */
-  public static List<PerunPolicy> getAllPolicies() {
-    return AuthzResolverBlImpl.getAllPolicies();
-  }
-
-  /**
-   * Return all loaded roles management rules.
-   *
-   * @return all roles management rules
-   */
-  public static List<RoleManagementRules> getAllRolesManagementRules() {
-    return AuthzResolverBlImpl.getAllRolesManagementRules();
-  }
-
-  /**
-   * Get all Vos where the given user has set one of the given roles
-   * or the given user is a member of an authorized group with such roles.
-   * If user parameter is null then Vos are retrieved for the given principal.
-   *
-   * @param sess  Perun session
-   * @param user  for who Vos are retrieved
-   * @param roles for which Vos are retrieved
-   * @return List of Vos
-   * @throws PrivilegeException when the principal is not authorized.
-   */
-  public static List<Vo> getVosWhereUserIsInRoles(PerunSession sess, User user, List<String> roles)
-      throws PrivilegeException {
-    Utils.checkPerunSession(sess);
-    Utils.notNull(roles, "roles");
-
-    if (user == null) {
-      user = sess.getPerunPrincipal().getUser();
-    } else {
-      //Authorization
-      if (!authorizedInternal(sess, "getVosWhereUserIsInRoles_User_List<String>_policy", user)) {
-        throw new PrivilegeException(sess, "getVosWhereUserIsInRoles");
-      }
+    for (User user : users) {
+      unsetRole(sess, user, complementaryObject, role);
     }
-
-    return AuthzResolverBlImpl.getVosWhereUserIsInRoles(sess, user, roles);
   }
 
   /**
-   * Get all Facilities where the given user has set one of the given roles
-   * or the given user is a member of an authorized group with such roles.
-   * If user parameter is null then Facilities are retrieved for the given principal.
-   *
-   * @param sess  Perun session
-   * @param user  for who Facilities are retrieved
-   * @param roles for which Facilities are retrieved
-   * @return List of Facilities
-   * @throws PrivilegeException when the principal is not authorized.
-   */
-  public static List<Facility> getFacilitiesWhereUserIsInRoles(PerunSession sess, User user, List<String> roles)
-      throws PrivilegeException {
-    Utils.checkPerunSession(sess);
-    Utils.notNull(roles, "roles");
-
-    if (user == null) {
-      user = sess.getPerunPrincipal().getUser();
-    } else {
-      //Authorization
-      if (!authorizedInternal(sess, "getFacilitiesWhereUserIsInRoles_User_List<String>_policy", user)) {
-        throw new PrivilegeException(sess, "getFacilitiesWhereUserIsInRoles");
-      }
-    }
-
-    return AuthzResolverBlImpl.getFacilitiesWhereUserIsInRoles(sess, user, roles);
-  }
-
-  /**
-   * Get all Resources where the given user has set one of the given roles
-   * or the given user is a member of an authorized group with such roles.
-   * If user parameter is null then Resources are retrieved for the given principal.
-   *
-   * @param sess  Perun session
-   * @param user  for who Resources are retrieved
-   * @param roles for which Resources are retrieved
-   * @return List of Resources
-   * @throws PrivilegeException when the principal is not authorized.
-   */
-  public static List<Resource> getResourcesWhereUserIsInRoles(PerunSession sess, User user, List<String> roles)
-      throws PrivilegeException {
-    Utils.checkPerunSession(sess);
-    Utils.notNull(roles, "roles");
-
-    if (user == null) {
-      user = sess.getPerunPrincipal().getUser();
-    } else {
-      //Authorization
-      if (!authorizedInternal(sess, "getResourcesWhereUserIsInRoles_User_List<String>_policy", user)) {
-        throw new PrivilegeException(sess, "getResourcesWhereUserIsInRoles");
-      }
-    }
-
-    return AuthzResolverBlImpl.getResourcesWhereUserIsInRoles(sess, user, roles);
-  }
-
-  /**
-   * Get all Groups where the given user has set one of the given roles
-   * or the given user is a member of an authorized group with such roles.
-   * If user parameter is null then Groups are retrieved for the given principal.
+   * Unset role for user and <b>one</b> complementary object.
    * <p>
-   * Method does not return subgroups of the fetched groups.
+   * If complementary object is wrong for the role, throw an exception. For role "PERUNADMIN" ignore complementary
+   * object.
    *
-   * @param sess  Perun session
-   * @param user  for who Groups are retrieved
-   * @param roles for which Groups are retrieved
-   * @return List of Groups
-   * @throws PrivilegeException when the principal is not authorized.
+   * @param sess                perun session
+   * @param user                the user for unsetting role
+   * @param role                role of user in a session
+   * @param complementaryObject object for which role will be unset
    */
-  public static List<Group> getGroupsWhereUserIsInRoles(PerunSession sess, User user, List<String> roles)
-      throws PrivilegeException {
-    Utils.checkPerunSession(sess);
-    Utils.notNull(roles, "roles");
+  public static void unsetRole(PerunSession sess, User user, PerunBean complementaryObject, String role)
+      throws PrivilegeException, UserNotExistsException, UserNotAdminException, RoleCannotBeManagedException {
+    Utils.notNull(role, "role");
+    if (!roleExists(role)) {
+      throw new InternalErrorException("Role: " + role + " does not exists.");
+    }
+    ((PerunBl) sess.getPerun()).getUsersManagerBl().checkUserExists(sess, user);
 
-    if (user == null) {
-      user = sess.getPerunPrincipal().getUser();
-    } else {
-      //Authorization
-      if (!authorizedInternal(sess, "getGroupsWhereUserIsInRoles_User_List<String>_policy", user)) {
-        throw new PrivilegeException(sess, "getGroupsWhereUserIsInRoles");
+    try {
+      if (!authorizedToManageRole(sess, complementaryObject, role)) {
+        throw new PrivilegeException("You are not privileged to use the method unsetRole.");
       }
+    } catch (RoleManagementRulesNotExistsException e) {
+      throw new InternalErrorException("Management rules not exist for the role " + role, e);
     }
 
-    return AuthzResolverBlImpl.getGroupsWhereUserIsInRoles(sess, user, roles);
+    AuthzResolverBlImpl.unsetRole(sess, user, complementaryObject, role);
   }
 
   /**
-   * Get all Members where the given user has set one of the given roles
-   * or the given user is a member of an authorized group with such roles.
-   * If user parameter is null then Members are retrieved for the given principal.
+   * Unset role for user and <b>all</b> complementary objects
+   * <p>
+   * If some complementary object is wrong for the role, throw an exception. For role "PERUNADMIN" ignore complementary
+   * objects.
    *
-   * @param sess  Perun session
-   * @param user  for who Members are retrieved
-   * @param roles for which Members are retrieved
-   * @return List of Members
-   * @throws PrivilegeException when the principal is not authorized.
+   * @param sess                 perun session
+   * @param user                 the user for unsetting role
+   * @param role                 role of user in a session
+   * @param complementaryObjects objects for which role will be unset
    */
-  public static List<Member> getMembersWhereUserIsInRoles(PerunSession sess, User user, List<String> roles)
-      throws PrivilegeException {
-    Utils.checkPerunSession(sess);
-    Utils.notNull(roles, "roles");
-
-    if (user == null) {
-      user = sess.getPerunPrincipal().getUser();
-    } else {
-      //Authorization
-      if (!authorizedInternal(sess, "getMembersWhereUserIsInRoles_User_List<String>_policy", user)) {
-        throw new PrivilegeException(sess, "getMembersWhereUserIsInRoles");
-      }
+  public static void unsetRole(PerunSession sess, User user, String role, List<PerunBean> complementaryObjects)
+      throws PrivilegeException, UserNotExistsException, UserNotAdminException, RoleCannotBeManagedException {
+    if (!roleExists(role)) {
+      throw new InternalErrorException("Role: " + role + " does not exists.");
     }
 
-    return AuthzResolverBlImpl.getMembersWhereUserIsInRoles(sess, user, roles);
+    for (PerunBean complementaryObject : complementaryObjects) {
+      unsetRole(sess, user, complementaryObject, role);
+    }
   }
 
   /**
-   * Get all SecurityTeams where the given user has set one of the given roles
-   * or the given user is a member of an authorized group with such roles.
-   * If user parameter is null then SecurityTeams are retrieved for the given principal.
+   * Unset role for group and <b>all</b> complementary objects
+   * <p>
+   * If some complementary object is wrong for the role, throw an exception. For role "PERUNADMIN" ignore complementary
+   * objects.
    *
-   * @param sess  Perun session
-   * @param user  for who SecurityTeams are retrieved
-   * @param roles for which SecurityTeams are retrieved
-   * @return List of SecurityTeams
-   * @throws PrivilegeException when the principal is not authorized.
+   * @param sess                 perun session
+   * @param authorizedGroup      the group for unsetting role
+   * @param role                 role of user in a session
+   * @param complementaryObjects objects for which role will be unset
    */
-  public static List<SecurityTeam> getSecurityTeamsWhereUserIsInRoles(PerunSession sess, User user, List<String> roles)
-      throws PrivilegeException {
-    Utils.checkPerunSession(sess);
-    Utils.notNull(roles, "roles");
-
-    if (user == null) {
-      user = sess.getPerunPrincipal().getUser();
-    } else {
-      //Authorization
-      if (!authorizedInternal(sess, "getSecurityTeamsWhereUserIsInRoles_User_List<String>_policy", user)) {
-        throw new PrivilegeException(sess, "getSecurityTeamsWhereUserIsInRoles");
-      }
+  public static void unsetRole(PerunSession sess, Group authorizedGroup, String role,
+                               List<PerunBean> complementaryObjects)
+      throws PrivilegeException, GroupNotExistsException, GroupNotAdminException, RoleCannotBeManagedException {
+    if (!roleExists(role)) {
+      throw new InternalErrorException("Role: " + role + " does not exists.");
     }
 
-    return AuthzResolverBlImpl.getSecurityTeamsWhereUserIsInRoles(sess, user, roles);
+    for (PerunBean complementaryObject : complementaryObjects) {
+      unsetRole(sess, authorizedGroup, complementaryObject, role);
+    }
   }
 }
