@@ -1,5 +1,15 @@
 package cz.metacentrum.perun.core.entry;
 
+import static cz.metacentrum.perun.core.blImpl.VosManagerBlImpl.A_MEMBER_DEF_MEMBER_ORGANIZATIONS;
+import static cz.metacentrum.perun.core.blImpl.VosManagerBlImpl.A_MEMBER_DEF_MEMBER_ORGANIZATIONS_HISTORY;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertNull;
+import static org.junit.Assert.assertTrue;
+
 import cz.metacentrum.perun.core.AbstractPerunIntegrationTest;
 import cz.metacentrum.perun.core.api.Attribute;
 import cz.metacentrum.perun.core.api.AttributeDefinition;
@@ -30,10 +40,6 @@ import cz.metacentrum.perun.core.api.exceptions.UserNotExistsException;
 import cz.metacentrum.perun.core.api.exceptions.VoExistsException;
 import cz.metacentrum.perun.core.api.exceptions.VoNotExistsException;
 import cz.metacentrum.perun.core.implApi.modules.attributes.AbstractMembershipExpirationRulesModule;
-import org.junit.Before;
-import org.junit.Ignore;
-import org.junit.Test;
-
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
@@ -43,16 +49,9 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
-
-import static cz.metacentrum.perun.core.blImpl.VosManagerBlImpl.A_MEMBER_DEF_MEMBER_ORGANIZATIONS;
-import static cz.metacentrum.perun.core.blImpl.VosManagerBlImpl.A_MEMBER_DEF_MEMBER_ORGANIZATIONS_HISTORY;
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertTrue;
+import org.junit.Before;
+import org.junit.Ignore;
+import org.junit.Test;
 
 /**
  * Integration tests of VosManager.
@@ -61,8 +60,8 @@ import static org.junit.Assert.assertTrue;
  */
 public class VosManagerEntryIntegrationTest extends AbstractPerunIntegrationTest {
 
-  private final static String extSourceName = "VosManagerEntryIntegrationTest";
-  private final static String CLASS_NAME = "VosManager.";
+  private static final String extSourceName = "VosManagerEntryIntegrationTest";
+  private static final String CLASS_NAME = "VosManager.";
   private final int someNumber = 55;
   private final String voShortName = "TestShortN-" + someNumber;
   private final String voName = "Test Vo Name " + someNumber;
@@ -70,22 +69,270 @@ public class VosManagerEntryIntegrationTest extends AbstractPerunIntegrationTest
   private Vo myVo;
   private ExtSource es;
 
-  @Before
-  public void setUp() throws Exception {
-    vosManagerEntry = perun.getVosManager();
-    myVo = new Vo(0, voName, voShortName);
-    ExtSource newExtSource = new ExtSource(extSourceName, ExtSourcesManager.EXTSOURCE_INTERNAL);
-    es = perun.getExtSourcesManager().createExtSource(sess, newExtSource, null);
+  @Test
+  public void addAdmin() throws Exception {
+    System.out.println(CLASS_NAME + "addAdmin");
 
+    final Vo createdVo = vosManagerEntry.createVo(sess, myVo);
+
+    final Member member = createMemberFromExtSource(createdVo);
+    User user = perun.getUsersManagerBl().getUserByMember(sess, member);
+    vosManagerEntry.addAdmin(sess, createdVo, user);
+    final List<User> admins = vosManagerEntry.getAdmins(sess, createdVo);
+
+    assertNotNull(admins);
+    assertTrue(admins.size() > 0);
+  }
+
+  @Test(expected = UserNotExistsException.class)
+  public void addAdminAsNonExistingUser() throws Exception {
+    System.out.println(CLASS_NAME + "addAdminAsNonExistingMember");
+
+    final Vo createdVo = vosManagerEntry.createVo(sess, myVo);
+
+    vosManagerEntry.addAdmin(sess, createdVo, new User());
+  }
+
+  @Test(expected = VoNotExistsException.class)
+  public void addAdminIntoNonExistingVo() throws Exception {
+    System.out.println(CLASS_NAME + "addAdminIntoNonExistingVo");
+
+    final Vo createdVo = vosManagerEntry.createVo(sess, myVo);
+    final Member member = createMemberFromExtSource(createdVo);
+    User user = perun.getUsersManagerBl().getUserByMember(sess, member);
+
+    vosManagerEntry.addAdmin(sess, new Vo(), user);
   }
 
   @Test
-  public void createVo() throws Exception {
-    System.out.println(CLASS_NAME + "createVo");
+  public void addAdminWithGroup() throws Exception {
+    System.out.println(CLASS_NAME + "addAdminWithGroup");
 
-    final Vo newVo = vosManagerEntry.createVo(sess, myVo);
+    final Vo createdVo = vosManagerEntry.createVo(sess, myVo);
 
-    assertTrue("id must be greater than zero", newVo.getId() > 0);
+    // set up authorized group
+    Group authorizedGroup = new Group("authorizedGroup", "testovaciGroup");
+    Group returnedGroup = perun.getGroupsManager().createGroup(sess, createdVo, authorizedGroup);
+    vosManagerEntry.addAdmin(sess, createdVo, returnedGroup);
+
+    final List<Group> admins = vosManagerEntry.getAdminGroups(sess, createdVo);
+
+    assertNotNull(admins);
+    assertTrue(admins.size() > 0);
+    assertTrue(admins.contains(authorizedGroup));
+  }
+
+  @Test
+  public void addExistingMemberVo() throws Exception {
+    System.out.println(CLASS_NAME + "addExistingMemberVo");
+
+    Vo vo = perun.getVosManagerBl().createVo(sess, myVo);
+    Vo vo2 = perun.getVosManagerBl().createVo(sess, new Vo(-1, "Vo2", "vo2"));
+    vosManagerEntry.addMemberVo(sess, vo, vo2);
+    assertThatExceptionOfType(RelationExistsException.class).isThrownBy(
+        () -> vosManagerEntry.addMemberVo(sess, vo, vo2));
+  }
+
+  private void addExtSourceDelegate(final Vo createdVo) throws Exception {
+    ExtSourcesManager esme = perun.getExtSourcesManager();
+    esme.addExtSource(sess, createdVo, es);
+  }
+
+  @Test
+  public void addFirstMemberVoSetsMemberOrganizations() throws Exception {
+    System.out.println(CLASS_NAME + "addFirstMemberVoSetsMemberOrganizations");
+
+    Vo vo = perun.getVosManagerBl().createVo(sess, myVo);
+    Vo memberVo = perun.getVosManagerBl().createVo(sess, new Vo(-1, "Vo2", "vo2"));
+    Member member = createMemberFromExtSource(vo);
+
+    perun.getVosManagerBl().addMemberVo(sess, vo, memberVo);
+
+    assertThat(perun.getAttributesManagerBl().getAttribute(sess, member, A_MEMBER_DEF_MEMBER_ORGANIZATIONS)
+        .valueAsList()).containsOnly(vo.getShortName());
+    assertThat(perun.getAttributesManagerBl().getAttribute(sess, member, A_MEMBER_DEF_MEMBER_ORGANIZATIONS_HISTORY)
+        .valueAsList()).containsOnly(vo.getShortName());
+  }
+
+  @Test
+  public void addMemberVo() throws Exception {
+    System.out.println(CLASS_NAME + "addMemberVo");
+
+    Vo vo = perun.getVosManagerBl().createVo(sess, myVo);
+    Vo memberVo = perun.getVosManagerBl().createVo(sess, new Vo(-1, "Vo2", "vo2"));
+
+    vosManagerEntry.addMemberVo(sess, vo, memberVo);
+    assertThat(vosManagerEntry.getMemberVos(sess, vo.getId())).containsExactly(memberVo);
+  }
+
+  @Test
+  public void addMemberVoExistingMember() throws Exception {
+    System.out.println(CLASS_NAME + "addMemberVoExistingMember");
+
+    Vo vo = perun.getVosManagerBl().createVo(sess, myVo);
+    Vo memberVo1 = perun.getVosManagerBl().createVo(sess, new Vo(-1, "Vo2", "vo2"));
+    Vo memberVo2 = perun.getVosManagerBl().createVo(sess, new Vo(-2, "Vo3", "vo3"));
+
+    Member member1 = createMemberFromExtSource(memberVo1);
+    Member member2 = perun.getMembersManagerBl()
+        .createMember(sess, memberVo2, perun.getUsersManagerBl().getUserByMember(sess, member1));
+    perun.getMembersManagerBl().validateMember(sess, member2);
+    vosManagerEntry.addMemberVo(sess, vo, memberVo1);
+    vosManagerEntry.addMemberVo(sess, vo, memberVo2);
+
+    List<Member> membersInParentVo = perun.getMembersManagerBl().getMembers(sess, vo);
+    assertThat(membersInParentVo.size()).isEqualTo(1);
+    assertThat(
+        perun.getAttributesManagerBl().getAttribute(sess, membersInParentVo.get(0), A_MEMBER_DEF_MEMBER_ORGANIZATIONS)
+            .valueAsList()).contains(memberVo1.getShortName(), memberVo2.getShortName());
+    assertThat(perun.getAttributesManagerBl()
+        .getAttribute(sess, membersInParentVo.get(0), A_MEMBER_DEF_MEMBER_ORGANIZATIONS_HISTORY)
+        .valueAsList()).contains(memberVo1.getShortName(), memberVo2.getShortName());
+  }
+
+  @Test
+  public void addMemberVoNoExistingMember() throws Exception {
+    System.out.println(CLASS_NAME + "addMemberVoNoExistingMember");
+
+    Vo vo = perun.getVosManagerBl().createVo(sess, myVo);
+    Vo memberVo = perun.getVosManagerBl().createVo(sess, new Vo(-1, "Vo2", "vo2"));
+
+    Member member = createMemberFromExtSource(memberVo);
+    vosManagerEntry.addMemberVo(sess, vo, memberVo);
+
+    assertThat(perun.getMembersManagerBl().getMembers(sess, vo).size()).isEqualTo(1);
+    assertThat(perun.getMembersManagerBl().getMembers(sess, vo).get(0).getUserId()).isEqualTo(member.getUserId());
+
+    List<Member> membersInParentVo = perun.getMembersManagerBl().getMembers(sess, vo);
+    assertThat(membersInParentVo.size()).isEqualTo(1);
+    assertThat(
+        perun.getAttributesManagerBl().getAttribute(sess, membersInParentVo.get(0), A_MEMBER_DEF_MEMBER_ORGANIZATIONS)
+            .valueAsList()).contains(memberVo.getShortName());
+    assertThat(perun.getAttributesManagerBl()
+        .getAttribute(sess, membersInParentVo.get(0), A_MEMBER_DEF_MEMBER_ORGANIZATIONS_HISTORY)
+        .valueAsList()).contains(memberVo.getShortName());
+  }
+
+  @Test
+  public void addMemberVoParent() throws Exception {
+    System.out.println(CLASS_NAME + "addMemberVo");
+
+    Vo vo = perun.getVosManagerBl().createVo(sess, myVo);
+    Vo memberVo = perun.getVosManagerBl().createVo(sess, new Vo(-1, "Vo2", "vo2"));
+
+    vosManagerEntry.addMemberVo(sess, vo, memberVo);
+    assertThat(vosManagerEntry.getMemberVos(sess, vo.getId())).containsExactly(memberVo);
+
+    assertThatExceptionOfType(RelationExistsException.class).isThrownBy(
+        () -> vosManagerEntry.addMemberVo(sess, memberVo, vo));
+  }
+
+  @Test
+  public void addMemberWithMemberVoResetsExpiration() throws Exception {
+    System.out.println(CLASS_NAME + "addMemberWithMemberVoResetsExpiration");
+
+    Vo vo = perun.getVosManagerBl().createVo(sess, myVo);
+    Vo memberVo = perun.getVosManagerBl().createVo(sess, new Vo(-1, "Vo2", "vo2"));
+    Member memberWithExpiration = createMemberFromExtSource(vo);
+    Member memberWithoutExpiration = perun.getMembersManagerBl()
+        .createMember(sess, memberVo, perun.getUsersManagerBl().getUserByMember(sess, memberWithExpiration));
+    perun.getMembersManagerBl().validateMember(sess, memberWithoutExpiration);
+
+    String membershipExpirationAttrName = perun.getAttributesManager().NS_MEMBER_ATTR_DEF + ":membershipExpiration";
+    String expirationValue = "2020-02-02";
+
+    AttributeDefinition attrDef =
+        perun.getAttributesManagerBl().getAttributeDefinition(sess, membershipExpirationAttrName);
+    perun.getAttributesManagerBl().setAttribute(sess, memberWithExpiration, new Attribute(attrDef, expirationValue));
+
+    AttributeDefinition memberOrgsAttrDef =
+        perun.getAttributesManagerBl().getAttributeDefinition(sess, A_MEMBER_DEF_MEMBER_ORGANIZATIONS);
+    perun.getAttributesManagerBl().setAttribute(sess, memberWithExpiration,
+        new Attribute(memberOrgsAttrDef, new ArrayList<>(List.of(vo.getShortName()))));
+    perun.getAttributesManagerBl().setAttribute(sess, memberWithoutExpiration,
+        new Attribute(memberOrgsAttrDef, new ArrayList<>(List.of(vo.getShortName()))));
+
+    AttributeDefinition memberOrgsHistoryAttrDef =
+        perun.getAttributesManagerBl().getAttributeDefinition(sess, A_MEMBER_DEF_MEMBER_ORGANIZATIONS_HISTORY);
+    perun.getAttributesManagerBl().setAttribute(sess, memberWithExpiration,
+        new Attribute(memberOrgsHistoryAttrDef, new ArrayList<>(List.of(vo.getShortName()))));
+    perun.getAttributesManagerBl().setAttribute(sess, memberWithoutExpiration,
+        new Attribute(memberOrgsHistoryAttrDef, new ArrayList<>(List.of(vo.getShortName()))));
+
+    assertEquals(perun.getAttributesManagerBl().getAttribute(sess, memberWithExpiration, membershipExpirationAttrName)
+        .getValue(), expirationValue);
+    assertNull(perun.getAttributesManagerBl().getAttribute(sess, memberWithoutExpiration, membershipExpirationAttrName)
+        .getValue());
+
+    vosManagerEntry.addMemberVo(sess, vo, memberVo);
+    assertNull(perun.getAttributesManagerBl().getAttribute(sess, memberWithExpiration, membershipExpirationAttrName)
+        .getValue());
+    assertNull(perun.getAttributesManagerBl().getAttribute(sess, memberWithoutExpiration, membershipExpirationAttrName)
+        .getValue());
+  }
+
+  @Test
+  public void convertSponsoredUsers() throws Exception {
+    System.out.println(CLASS_NAME + "convertSponsoredUsers");
+
+    myVo = vosManagerEntry.createVo(sess, myVo);
+
+    User user = new User(-1, "Sponsored", "User", "", "", "");
+    user.setSponsoredUser(true);
+    User sponsor1 = new User(-1, "Sponsor 1", "", "", "", "");
+    User sponsor2 = new User(-1, "Sponsor 2", "", "", "", "");
+
+    user = perun.getUsersManagerBl().createUser(sess, user);
+    sponsor1 = perun.getUsersManagerBl().createUser(sess, sponsor1);
+    sponsor2 = perun.getUsersManagerBl().createUser(sess, sponsor2);
+
+    perun.getUsersManagerBl().addSpecificUserOwner(sess, sponsor1, user);
+    perun.getUsersManagerBl().addSpecificUserOwner(sess, sponsor2, user);
+
+    Member member = perun.getMembersManagerBl().createMember(sess, myVo, user);
+
+    perun.getVosManager().convertSponsoredUsers(sess, myVo);
+
+    List<MemberWithSponsors> sponsoredMembersAndTheirSponsors =
+        perun.getMembersManager().getSponsoredMembersAndTheirSponsors(sess, myVo, Collections.emptyList());
+
+    assertThat(sponsoredMembersAndTheirSponsors).hasSize(1);
+    Member sponsoredMember = sponsoredMembersAndTheirSponsors.get(0).getMember();
+    List<Sponsor> sponsors = sponsoredMembersAndTheirSponsors.get(0).getSponsors();
+    assertThat(sponsoredMember).isEqualTo(member);
+    assertThat(sponsors).contains(new Sponsor(new RichUser(sponsor1, Collections.emptyList())));
+    assertThat(sponsors).contains(new Sponsor(new RichUser(sponsor2, Collections.emptyList())));
+  }
+
+  @Test
+  public void convertSponsoredUsersWithNewSponsor() throws Exception {
+    System.out.println(CLASS_NAME + "convertSponsoredUsersWithNewSponsor");
+
+    myVo = vosManagerEntry.createVo(sess, myVo);
+
+    User user = new User(-1, "Sponsored", "User", "", "", "");
+    user.setSponsoredUser(true);
+    User originalSponsor = new User(-1, "Sponsor 1", "", "", "", "");
+    User newSponsor = new User(-1, "Sponsor 2", "", "", "", "");
+
+    user = perun.getUsersManagerBl().createUser(sess, user);
+    originalSponsor = perun.getUsersManagerBl().createUser(sess, originalSponsor);
+    newSponsor = perun.getUsersManagerBl().createUser(sess, newSponsor);
+
+    perun.getUsersManagerBl().addSpecificUserOwner(sess, originalSponsor, user);
+
+    Member member = perun.getMembersManagerBl().createMember(sess, myVo, user);
+
+    perun.getVosManager().convertSponsoredUsersWithNewSponsor(sess, myVo, newSponsor);
+
+    List<MemberWithSponsors> sponsoredMembersAndTheirSponsors =
+        perun.getMembersManager().getSponsoredMembersAndTheirSponsors(sess, myVo, Collections.emptyList());
+
+    assertThat(sponsoredMembersAndTheirSponsors).hasSize(1);
+    Member sponsoredMember = sponsoredMembersAndTheirSponsors.get(0).getMember();
+    List<Sponsor> sponsors = sponsoredMembersAndTheirSponsors.get(0).getSponsors();
+    assertThat(sponsoredMember).isEqualTo(member);
+    assertThat(sponsors).contains(new Sponsor(new RichUser(newSponsor, Collections.emptyList())));
   }
 
   @Test
@@ -103,13 +350,31 @@ public class VosManagerEntryIntegrationTest extends AbstractPerunIntegrationTest
     assertTrue("newVo shortName has 32 characters length", newVo.getShortName().length() == 32);
   }
 
-  @Test(expected = VoExistsException.class)
-  public void createVoWhichAlreadyExists() throws Exception {
-    System.out.println(CLASS_NAME + "createVoWhichAlreadyExists");
+  private Member createMemberFromExtSource(final Vo createdVo) throws Exception {
 
-    vosManagerEntry.createVo(sess, myVo);
-    // this should throw exception
-    vosManagerEntry.createVo(sess, myVo);
+    //This is obsolete approach which is dependent on extSource, remove these lines in future...
+    //addExtSourceDelegate(createdVo);
+    //final List<Candidate> candidates = vosManagerEntry.findCandidates(sess,
+    //		createdVo, "kouril", 1);
+
+    final Candidate candidate = prepareCandidate();
+
+    final MembersManager membersManagerEntry = perun.getMembersManager();
+    final Member member = perun.getMembersManagerBl().createMemberSync(sess, createdVo, candidate);
+    //candidates.get(0));
+    assertNotNull("No member created", member);
+    usersForDeletion.add(perun.getUsersManager().getUserByMember(sess, member));
+    // save user for deletion after test
+    return member;
+  }
+
+  @Test
+  public void createVo() throws Exception {
+    System.out.println(CLASS_NAME + "createVo");
+
+    final Vo newVo = vosManagerEntry.createVo(sess, myVo);
+
+    assertTrue("id must be greater than zero", newVo.getId() > 0);
   }
 
   @Test
@@ -121,99 +386,61 @@ public class VosManagerEntryIntegrationTest extends AbstractPerunIntegrationTest
     assertThat(createdVo.getUuid().version()).isEqualTo(4);
   }
 
-  @Test
-  public void getVoById() throws Exception {
-    System.out.println(CLASS_NAME + "getVoById");
+  @Test(expected = VoExistsException.class)
+  public void createVoWhichAlreadyExists() throws Exception {
+    System.out.println(CLASS_NAME + "createVoWhichAlreadyExists");
 
-    final Vo createdVo = vosManagerEntry.createVo(sess, myVo);
-    final Vo returnedVo = vosManagerEntry.getVoById(sess, createdVo.getId());
-
-    final String createVoFailMsg = "The created vo is not ok, maybe try to check createVo()?";
-
-    assertNotNull(createVoFailMsg, createdVo);
-    assertNotNull("returned vo should not be null", returnedVo);
-
-    assertEquals(createdVo.getId(), returnedVo.getId());
-    assertEquals("name is not the same", createdVo.getName(), returnedVo.getName());
-    assertEquals("shortName is not the same", createdVo.getShortName(), returnedVo.getShortName());
-    assertThat(returnedVo.getUuid()).isNotNull();
-    assertThat(returnedVo.getUuid().version()).isEqualTo(4);
+    vosManagerEntry.createVo(sess, myVo);
+    // this should throw exception
+    vosManagerEntry.createVo(sess, myVo);
   }
 
   @Test
-  public void getVosByIds() throws Exception {
-    System.out.println(CLASS_NAME + "getVosByIds");
+  public void deleteMemberVoInHierarchy() throws Exception {
+    System.out.println(CLASS_NAME + "deleteMemberVoInHierarchy");
 
-    Vo createdVo = vosManagerEntry.createVo(sess, myVo);
-    List<Vo> vos = vosManagerEntry.getVosByIds(sess, Collections.singletonList(createdVo.getId()));
-    assertEquals(vos.size(), 1);
-    assertTrue(vos.contains(createdVo));
+    Vo vo = perun.getVosManagerBl().createVo(sess, myVo);
+    Vo memberVo = perun.getVosManagerBl().createVo(sess, new Vo(-1, "Vo2", "vo2"));
 
-    Vo anotherVo = vosManagerEntry.createVo(sess, new Vo(0, myVo.getName() + "2nd", myVo.getShortName() + "2nd"));
-    vos = vosManagerEntry.getVosByIds(sess, Arrays.asList(createdVo.getId(), anotherVo.getId()));
-    assertEquals(vos.size(), 2);
-    assertTrue(vos.contains(createdVo));
-    assertTrue(vos.contains(anotherVo));
+    vosManagerEntry.addMemberVo(sess, vo, memberVo);
 
-    vos = vosManagerEntry.getVosByIds(sess, Collections.singletonList(anotherVo.getId()));
-    assertEquals(vos.size(), 1);
-    assertTrue(vos.contains(anotherVo));
+    assertThatExceptionOfType(InternalErrorException.class).isThrownBy(
+        () -> vosManagerEntry.deleteVo(sess, memberVo, false));
+
+    vosManagerEntry.deleteVo(sess, memberVo, true);
+    assertThatExceptionOfType(VoNotExistsException.class).isThrownBy(
+        () -> vosManagerEntry.getVoById(sess, memberVo.getId()));
   }
 
   @Test
-  public void getVoByShortName() throws Exception {
-    System.out.println(CLASS_NAME + "getVoByShortName");
+  public void deleteParentVoInHierarchy() throws Exception {
+    System.out.println(CLASS_NAME + "deleteParentVoInHierarchy");
 
-    final Vo createdVo = vosManagerEntry.createVo(sess, myVo);
-    final Vo returnedVo = vosManagerEntry.getVoByShortName(sess, voShortName);
+    Vo vo = perun.getVosManagerBl().createVo(sess, myVo);
+    Vo memberVo = perun.getVosManagerBl().createVo(sess, new Vo(-1, "Vo2", "vo2"));
 
-    assertEquals(createdVo, returnedVo);
+    vosManagerEntry.addMemberVo(sess, vo, memberVo);
+
+    assertThatExceptionOfType(InternalErrorException.class).isThrownBy(() -> vosManagerEntry.deleteVo(sess, vo, false));
+
+    vosManagerEntry.deleteVo(sess, vo, true);
+    assertThatExceptionOfType(VoNotExistsException.class).isThrownBy(() -> vosManagerEntry.getVoById(sess, vo.getId()));
   }
 
   @Test(expected = VoNotExistsException.class)
-  public void getVoWhichNotExists() throws Exception {
-    System.out.println(CLASS_NAME + "getVoWhichNotExists");
+  public void deleteVo() throws Exception {
+    System.out.println(CLASS_NAME + "deleteVo");
 
-    final String nonExistingShortName = "_i_am_not_in_db_";
-    vosManagerEntry.getVoByShortName(sess, nonExistingShortName);
-  }
-
-  @Test
-  public void getVos() throws Exception {
-    System.out.println(CLASS_NAME + "getVos");
-
-    final Vo vo = vosManagerEntry.createVo(sess, myVo);
-    final List<Vo> vos = vosManagerEntry.getVos(sess);
-
-    assertTrue(vos.contains(vo));
-  }
-
-  @Test
-  public void getVosNotNull() throws Exception {
-    System.out.println(CLASS_NAME + "getVosNotNull");
-
-    // should not never return null or throw exception, even if no result
-    // found
-    assertNotNull(vosManagerEntry.getVos(sess));
-  }
-
-  @Test
-  public void updateVo() throws Exception {
-    System.out.println(CLASS_NAME + "updateVo");
-
-    Vo voToUpdate = vosManagerEntry.createVo(sess, myVo);
-    voToUpdate.setName("Cosa");
-    voToUpdate.setShortName("Nostra");
-    final Vo updatedVo = vosManagerEntry.updateVo(sess, voToUpdate);
-
-    assertEquals(voToUpdate, updatedVo);
+    final Vo createdVo = vosManagerEntry.createVo(sess, myVo);
+    vosManagerEntry.deleteVo(sess, createdVo);
+    vosManagerEntry.getVoById(sess, createdVo.getId());
   }
 
   @Test(expected = VoNotExistsException.class)
-  public void updateVoWhichNotExists() throws Exception {
-    System.out.println(CLASS_NAME + "updateVoWhichNotExists");
+  public void deleteVoWhichNotExists() throws Exception {
+    System.out.println(CLASS_NAME + "deleteVoWhichNotExists");
 
-    vosManagerEntry.updateVo(sess, new Vo());
+    vosManagerEntry.deleteVo(sess, new Vo());
   }
 
   @Test
@@ -225,13 +452,11 @@ public class VosManagerEntryIntegrationTest extends AbstractPerunIntegrationTest
 
     addExtSourceDelegate(createdVo);
 
-    final List<Candidate> candidates = vosManagerEntry.findCandidates(sess,
-        createdVo, "kouril");
+    final List<Candidate> candidates = vosManagerEntry.findCandidates(sess, createdVo, "kouril");
 
     // TODO tohle se mi moc nelibi, kde se nejaci candidates vzali? To by
     // bylo dobre plnit na zacatku testu db nebo je vytvorit rucne zde
-    assertTrue("Candidates count must be greater than 0",
-        candidates.size() > 0);
+    assertTrue("Candidates count must be greater than 0", candidates.size() > 0);
     removeExtSourceDelegate(createdVo);
   }
 
@@ -254,65 +479,39 @@ public class VosManagerEntryIntegrationTest extends AbstractPerunIntegrationTest
 
     addExtSourceDelegate(createdVo);
 
-    final List<Candidate> candidates = vosManagerEntry.findCandidates(sess,
-        createdVo, "kouril", 1);
+    final List<Candidate> candidates = vosManagerEntry.findCandidates(sess, createdVo, "kouril", 1);
 
     assertEquals(1, candidates.size());
     removeExtSourceDelegate(createdVo);
   }
 
-
   @Test
-  public void addAdmin() throws Exception {
-    System.out.println(CLASS_NAME + "addAdmin");
+  public void forceDeleteVoWithGroupAndSubgroup() throws Exception {
+    System.out.println(CLASS_NAME + "forceDeleteVoWithGroupAndSubgroup");
 
-    final Vo createdVo = vosManagerEntry.createVo(sess, myVo);
+    // create vo with group and subgroup
+    myVo = perun.getVosManagerBl().createVo(sess, myVo);
+    Group group = perun.getGroupsManager().createGroup(sess, myVo, new Group("group", "testingGroup"));
+    Group subgroup = perun.getGroupsManager().createGroup(sess, myVo, new Group("subgroup", "testingSubgroup"));
+    perun.getGroupsManager().moveGroup(sess, group, subgroup);
 
-    final Member member = createMemberFromExtSource(createdVo);
-    User user = perun.getUsersManagerBl().getUserByMember(sess, member);
-    vosManagerEntry.addAdmin(sess, createdVo, user);
-    final List<User> admins = vosManagerEntry.getAdmins(sess, createdVo);
-
-    assertNotNull(admins);
-    assertTrue(admins.size() > 0);
-  }
-
-  @Test(expected = VoNotExistsException.class)
-  public void addAdminIntoNonExistingVo() throws Exception {
-    System.out.println(CLASS_NAME + "addAdminIntoNonExistingVo");
-
-    final Vo createdVo = vosManagerEntry.createVo(sess, myVo);
-    final Member member = createMemberFromExtSource(createdVo);
-    User user = perun.getUsersManagerBl().getUserByMember(sess, member);
-
-    vosManagerEntry.addAdmin(sess, new Vo(), user);
-  }
-
-  @Test(expected = UserNotExistsException.class)
-  public void addAdminAsNonExistingUser() throws Exception {
-    System.out.println(CLASS_NAME + "addAdminAsNonExistingMember");
-
-    final Vo createdVo = vosManagerEntry.createVo(sess, myVo);
-
-    vosManagerEntry.addAdmin(sess, createdVo, new User());
+    // force delete vo
+    vosManagerEntry.deleteVo(sess, myVo, true);
+    assertThatExceptionOfType(VoNotExistsException.class).isThrownBy(
+        () -> vosManagerEntry.getVoById(sess, myVo.getId()));
   }
 
   @Test
-  public void addAdminWithGroup() throws Exception {
-    System.out.println(CLASS_NAME + "addAdminWithGroup");
+  public void getAdminGroups() throws Exception {
+    System.out.println(CLASS_NAME + "getAdminGroups");
 
     final Vo createdVo = vosManagerEntry.createVo(sess, myVo);
 
-    // set up authorized group
-    Group authorizedGroup = new Group("authorizedGroup", "testovaciGroup");
-    Group returnedGroup = perun.getGroupsManager().createGroup(sess, createdVo, authorizedGroup);
-    vosManagerEntry.addAdmin(sess, createdVo, returnedGroup);
+    final Group group = new Group("testGroup", "just for testing");
+    perun.getGroupsManager().createGroup(sess, createdVo, group);
 
-    final List<Group> admins = vosManagerEntry.getAdminGroups(sess, createdVo);
-
-    assertNotNull(admins);
-    assertTrue(admins.size() > 0);
-    assertTrue(admins.contains(authorizedGroup));
+    vosManagerEntry.addAdmin(sess, createdVo, group);
+    assertTrue(vosManagerEntry.getAdminGroups(sess, createdVo).contains(group));
   }
 
   @Test
@@ -339,8 +538,9 @@ public class VosManagerEntryIntegrationTest extends AbstractPerunIntegrationTest
     candidate.setLastName("Novak");
     candidate.setTitleBefore("");
     candidate.setTitleAfter("");
-    UserExtSource userExtSource = new UserExtSource(new ExtSource(0, "testExtSource",
-        "cz.metacentrum.perun.core.impl.ExtSourceInternal"), Long.toHexString(Double.doubleToLongBits(Math.random())));
+    UserExtSource userExtSource =
+        new UserExtSource(new ExtSource(0, "testExtSource", "cz.metacentrum.perun.core.impl.ExtSourceInternal"),
+            Long.toHexString(Double.doubleToLongBits(Math.random())));
     candidate.setUserExtSource(userExtSource);
     candidate.setAttributes(new HashMap<>());
 
@@ -353,159 +553,6 @@ public class VosManagerEntryIntegrationTest extends AbstractPerunIntegrationTest
     assertTrue("should have 2 admins", admins.size() == 2);
     assertTrue("our member as direct user should be admin", admins.contains(user));
     assertTrue("our member as member of admin group should be admin", admins.contains(user2));
-  }
-
-  @Test
-  public void getDirectAdmins() throws Exception {
-    System.out.println(CLASS_NAME + "getDirectAdmins");
-
-    final Vo createdVo = vosManagerEntry.createVo(sess, myVo);
-
-    final Member member = createMemberFromExtSource(createdVo);
-    User user = perun.getUsersManagerBl().getUserByMember(sess, member);
-
-    vosManagerEntry.addAdmin(sess, createdVo, user);
-    assertTrue(vosManagerEntry.getDirectAdmins(sess, createdVo).contains(user));
-  }
-
-  @Test
-  public void getAdminGroups() throws Exception {
-    System.out.println(CLASS_NAME + "getAdminGroups");
-
-    final Vo createdVo = vosManagerEntry.createVo(sess, myVo);
-
-    final Group group = new Group("testGroup", "just for testing");
-    perun.getGroupsManager().createGroup(sess, createdVo, group);
-
-    vosManagerEntry.addAdmin(sess, createdVo, group);
-    assertTrue(vosManagerEntry.getAdminGroups(sess, createdVo).contains(group));
-  }
-
-  @Test(expected = UserNotExistsException.class)
-  public void removeAdminWhichNotExists() throws Exception {
-    System.out.println(CLASS_NAME + "removeAdminWhichNotExists");
-
-    final Vo createdVo = vosManagerEntry.createVo(sess, myVo);
-
-    vosManagerEntry.removeAdmin(sess, createdVo, new User());
-  }
-
-  @Test
-  public void removeAdmin() throws Exception {
-    System.out.println(CLASS_NAME + "removeAdmin");
-
-    final Vo createdVo = vosManagerEntry.createVo(sess, myVo);
-    final Member member = createMemberFromExtSource(createdVo);
-    User user = perun.getUsersManagerBl().getUserByMember(sess, member);
-
-    vosManagerEntry.addAdmin(sess, createdVo, user);
-    assertTrue(vosManagerEntry.getAdmins(sess, createdVo).contains(user));
-
-    vosManagerEntry.removeAdmin(sess, createdVo, user);
-    assertFalse(vosManagerEntry.getAdmins(sess, createdVo).contains(user));
-  }
-
-  @Test
-  public void removeAdminWithGroup() throws Exception {
-    System.out.println(CLASS_NAME + "removeAdminWithGroup");
-
-    final Vo createdVo = vosManagerEntry.createVo(sess, myVo);
-
-    // set up authorized group
-    Group authorizedGroup = new Group("authorizedGroup", "testovaciGroup");
-    Group returnedGroup = perun.getGroupsManager().createGroup(sess, createdVo, authorizedGroup);
-    vosManagerEntry.addAdmin(sess, createdVo, returnedGroup);
-
-    vosManagerEntry.removeAdmin(sess, createdVo, returnedGroup);
-    assertFalse(vosManagerEntry.getAdminGroups(sess, createdVo).contains(returnedGroup));
-  }
-
-  @Test(expected = VoNotExistsException.class)
-  public void deleteVo() throws Exception {
-    System.out.println(CLASS_NAME + "deleteVo");
-
-    final Vo createdVo = vosManagerEntry.createVo(sess, myVo);
-    vosManagerEntry.deleteVo(sess, createdVo);
-    vosManagerEntry.getVoById(sess, createdVo.getId());
-  }
-
-  @Test(expected = VoNotExistsException.class)
-  public void deleteVoWhichNotExists() throws Exception {
-    System.out.println(CLASS_NAME + "deleteVoWhichNotExists");
-
-    vosManagerEntry.deleteVo(sess, new Vo());
-  }
-
-  @Test
-  public void forceDeleteVoWithGroupAndSubgroup() throws Exception {
-    System.out.println(CLASS_NAME + "forceDeleteVoWithGroupAndSubgroup");
-
-    // create vo with group and subgroup
-    myVo = perun.getVosManagerBl().createVo(sess, myVo);
-    Group group = perun.getGroupsManager().createGroup(sess, myVo, new Group("group", "testingGroup"));
-    Group subgroup = perun.getGroupsManager().createGroup(sess, myVo, new Group("subgroup", "testingSubgroup"));
-    perun.getGroupsManager().moveGroup(sess, group, subgroup);
-
-    // force delete vo
-    vosManagerEntry.deleteVo(sess, myVo, true);
-    assertThatExceptionOfType(VoNotExistsException.class)
-        .isThrownBy(() -> vosManagerEntry.getVoById(sess, myVo.getId()));
-  }
-
-  @Test
-  public void setBanCorrectly() throws Exception {
-    System.out.println(CLASS_NAME + "setBanCorrectly");
-
-    Vo createdVo = vosManagerEntry.createVo(sess, myVo);
-    Member member = createMemberFromExtSource(createdVo);
-
-    BanOnVo ban = new BanOnVo();
-    ban.setMemberId(member.getId());
-
-    ban = vosManagerEntry.setBan(sess, ban);
-
-    assertThat(ban.getId()).isNotNull();
-    assertThat(ban.getVoId()).isNotNull();
-
-    BanOnVo foundBan = vosManagerEntry.getBanById(sess, ban.getId());
-
-    assertThat(foundBan).isEqualToIgnoringNullFields(ban);
-  }
-
-  @Test
-  public void removeBanCorrectly() throws Exception {
-    System.out.println(CLASS_NAME + "removeBanCorrectly");
-
-    Vo createdVo = vosManagerEntry.createVo(sess, myVo);
-    Member member = createMemberFromExtSource(createdVo);
-
-    BanOnVo ban = new BanOnVo();
-    ban.setMemberId(member.getId());
-
-    vosManagerEntry.setBan(sess, ban);
-
-    vosManagerEntry.removeBan(sess, ban.getId());
-
-    assertThatExceptionOfType(BanNotExistsException.class)
-        .isThrownBy(() -> vosManagerEntry.getBanById(sess, ban.getId()));
-  }
-
-  @Test
-  public void removeBanForMemberCorrectly() throws Exception {
-    System.out.println(CLASS_NAME + "removeBanForMemberCorrectly");
-
-    Vo createdVo = vosManagerEntry.createVo(sess, myVo);
-    Member member = createMemberFromExtSource(createdVo);
-
-    BanOnVo ban = new BanOnVo();
-    ban.setMemberId(member.getId());
-
-    vosManagerEntry.setBan(sess, ban);
-
-    vosManagerEntry.removeBanForMember(sess, member);
-
-    assertThat(vosManagerEntry.getBanForMember(sess, member))
-        .isNull();
   }
 
   @Test
@@ -572,45 +619,97 @@ public class VosManagerEntryIntegrationTest extends AbstractPerunIntegrationTest
   }
 
   @Test
-  public void updateBan() throws Exception {
-    System.out.println(CLASS_NAME + "updateBan");
-    Vo vo = vosManagerEntry.createVo(sess, myVo);
-    Member member = createMemberFromExtSource(vo);
+  public void getCompleteCandidatesFromGroup() throws Exception {
+    System.out.println(CLASS_NAME + "getCompleteCandidatesFromGroup");
 
-    BanOnVo banOnVo = new BanOnVo();
-    banOnVo.setMemberId(member.getId());
-    banOnVo.setDescription("Description");
-    banOnVo.setValidityTo(new Date());
-    banOnVo = vosManagerEntry.setBan(sess, banOnVo);
-    banOnVo.setDescription("New description");
-    banOnVo.setValidityTo(new Date(banOnVo.getValidityTo().getTime() + 1000000));
-    vosManagerEntry.updateBan(sess, banOnVo);
+    // create group and vo
+    myVo = perun.getVosManagerBl().createVo(sess, myVo);
+    Group group = new Group("testGroup", "testingGroup");
+    Group returnedGroup = perun.getGroupsManager().createGroup(sess, myVo, group);
 
-    BanOnVo returnedBan = vosManagerEntry.getBanById(sess, banOnVo.getId());
-    assertEquals(banOnVo, returnedBan);
+    // prepare second extSource
+    ExtSource extSource = new ExtSource("testExtSource", ExtSourcesManager.EXTSOURCE_INTERNAL);
+    extSource = perun.getExtSourcesManagerBl().createExtSource(sess, extSource, null);
+
+    // prepare users to be returned by getCompleteCandidates
+    Candidate candidate = prepareCandidateWithExtSource("Jan", es);
+    User userToContain1 =
+        perun.getUsersManagerBl().getRichUser(sess, perun.getUsersManagerBl().createUser(sess, candidate));
+    candidate = prepareCandidateWithExtSource("Jana", es);
+    User userToContain2 =
+        perun.getUsersManagerBl().getRichUser(sess, perun.getUsersManagerBl().createUser(sess, candidate));
+    candidate = prepareCandidateWithExtSource("Josef", es);
+    User userNotToContain1 =
+        perun.getUsersManagerBl().getRichUser(sess, perun.getUsersManagerBl().createUser(sess, candidate));
+    candidate = prepareCandidateWithExtSource("Jan", extSource);
+    RichUser userNotToContain2 =
+        perun.getUsersManagerBl().getRichUser(sess, perun.getUsersManagerBl().createUser(sess, candidate));
+    candidate = prepareCandidateWithExtSource("Jana", extSource);
+    RichUser userToContain3 =
+        perun.getUsersManagerBl().getRichUser(sess, perun.getUsersManagerBl().createUser(sess, candidate));
+    Member member = perun.getMembersManagerBl().createMember(sess, myVo, candidate);
+
+    List<MemberCandidate> completeCandidates =
+        perun.getVosManagerBl().getCompleteCandidates(sess, myVo, returnedGroup, null, "jan", Arrays.asList(es));
+
+    List<RichUser> usersOfCompleteCandidates =
+        completeCandidates.stream().map(MemberCandidate::getRichUser).collect(Collectors.toList());
+
+    assertEquals("Three users should have been returned.", 3, usersOfCompleteCandidates.size());
+    assertTrue("User should've been returned.", usersOfCompleteCandidates.contains(userToContain1));
+    assertTrue("User should've been returned.", usersOfCompleteCandidates.contains(userToContain2));
+    assertTrue("User should've been returned.", usersOfCompleteCandidates.contains(userToContain3));
+    assertFalse("User shouldn't have been returned.", usersOfCompleteCandidates.contains(userNotToContain1));
+    assertFalse("User shouldn't have been returned.", usersOfCompleteCandidates.contains(userNotToContain2));
   }
 
   @Test
-  public void getEnrichedBansForVoWithAttributes() throws Exception {
-    System.out.println(CLASS_NAME + "getEnrichedBansForVoWithAttributes");
+  public void getCompleteCandidatesFromGroupWithNullVo() throws Exception {
+    System.out.println(CLASS_NAME + "getCompleteCandidatesFromGroupWithNullVo");
 
-    Vo createdVo = vosManagerEntry.createVo(sess, myVo);
-    Member member = createMemberFromExtSource(createdVo);
+    // create group and vo
+    myVo = perun.getVosManagerBl().createVo(sess, myVo);
+    Group group = new Group("testGroup", "testingGroup");
+    Group returnedGroup = perun.getGroupsManager().createGroup(sess, myVo, group);
 
-    BanOnVo ban = new BanOnVo();
-    ban.setMemberId(member.getId());
+    // prepare second extSource
+    ExtSource extSource = new ExtSource("testExtSource", ExtSourcesManager.EXTSOURCE_INTERNAL);
+    extSource = perun.getExtSourcesManagerBl().createExtSource(sess, extSource, null);
 
-    vosManagerEntry.setBan(sess, ban);
+    // prepare users to be returned by getCompleteCandidates
+    Candidate candidate = prepareCandidateWithExtSource("Jan", es);
+    User userToContain1 =
+        perun.getUsersManagerBl().getRichUser(sess, perun.getUsersManagerBl().createUser(sess, candidate));
+    candidate = prepareCandidateWithExtSource("Josef", es);
+    User userNotToContain1 =
+        perun.getUsersManagerBl().getRichUser(sess, perun.getUsersManagerBl().createUser(sess, candidate));
+    candidate = prepareCandidateWithExtSource("Jana", extSource);
+    RichUser userToContain2 =
+        perun.getUsersManagerBl().getRichUser(sess, perun.getUsersManagerBl().createUser(sess, candidate));
 
-    List<String> attrNames = List.of(AttributesManager.NS_MEMBER_ATTR_CORE + ":id");
-    List<EnrichedBanOnVo> enrichedBans = vosManagerEntry.getEnrichedBansForVo(sess, createdVo.getId(), attrNames);
+    List<MemberCandidate> completeCandidates =
+        perun.getVosManagerBl().getCompleteCandidates(sess, null, returnedGroup, null, "jan", Arrays.asList(es));
 
-    assertThat(enrichedBans).hasSize(1);
-    assertThat(enrichedBans.get(0).getBan()).isEqualTo(ban);
-    assertThat(enrichedBans.get(0).getMember()).isEqualTo(member);
-    assertThat(enrichedBans.get(0).getVo()).isEqualTo(createdVo);
-    assertThat(enrichedBans.get(0).getMember().getMemberAttributes()).hasSize(1);
-    assertThat(enrichedBans.get(0).getMember().getMemberAttributes().get(0).getFriendlyName()).isEqualTo("id");
+    List<RichUser> usersOfCompleteCandidates =
+        completeCandidates.stream().map(MemberCandidate::getRichUser).collect(Collectors.toList());
+
+    assertEquals("Three users should have been returned.", 2, usersOfCompleteCandidates.size());
+    assertTrue("User should've been returned.", usersOfCompleteCandidates.contains(userToContain1));
+    assertTrue("User should've been returned.", usersOfCompleteCandidates.contains(userToContain2));
+    assertFalse("User shouldn't have been returned.", usersOfCompleteCandidates.contains(userNotToContain1));
+  }
+
+  @Test
+  public void getDirectAdmins() throws Exception {
+    System.out.println(CLASS_NAME + "getDirectAdmins");
+
+    final Vo createdVo = vosManagerEntry.createVo(sess, myVo);
+
+    final Member member = createMemberFromExtSource(createdVo);
+    User user = perun.getUsersManagerBl().getUserByMember(sess, member);
+
+    vosManagerEntry.addAdmin(sess, createdVo, user);
+    assertTrue(vosManagerEntry.getDirectAdmins(sess, createdVo).contains(user));
   }
 
   @Test
@@ -661,175 +760,65 @@ public class VosManagerEntryIntegrationTest extends AbstractPerunIntegrationTest
   }
 
   @Test
-  public void convertSponsoredUsers() throws Exception {
-    System.out.println(CLASS_NAME + "convertSponsoredUsers");
+  public void getEnrichedBansForVoWithAttributes() throws Exception {
+    System.out.println(CLASS_NAME + "getEnrichedBansForVoWithAttributes");
 
-    myVo = vosManagerEntry.createVo(sess, myVo);
+    Vo createdVo = vosManagerEntry.createVo(sess, myVo);
+    Member member = createMemberFromExtSource(createdVo);
 
-    User user = new User(-1, "Sponsored", "User", "", "", "");
-    user.setSponsoredUser(true);
-    User sponsor1 = new User(-1, "Sponsor 1", "", "", "", "");
-    User sponsor2 = new User(-1, "Sponsor 2", "", "", "", "");
+    BanOnVo ban = new BanOnVo();
+    ban.setMemberId(member.getId());
 
-    user = perun.getUsersManagerBl().createUser(sess, user);
-    sponsor1 = perun.getUsersManagerBl().createUser(sess, sponsor1);
-    sponsor2 = perun.getUsersManagerBl().createUser(sess, sponsor2);
+    vosManagerEntry.setBan(sess, ban);
 
-    perun.getUsersManagerBl().addSpecificUserOwner(sess, sponsor1, user);
-    perun.getUsersManagerBl().addSpecificUserOwner(sess, sponsor2, user);
+    List<String> attrNames = List.of(AttributesManager.NS_MEMBER_ATTR_CORE + ":id");
+    List<EnrichedBanOnVo> enrichedBans = vosManagerEntry.getEnrichedBansForVo(sess, createdVo.getId(), attrNames);
 
-    Member member = perun.getMembersManagerBl().createMember(sess, myVo, user);
-
-    perun.getVosManager().convertSponsoredUsers(sess, myVo);
-
-    List<MemberWithSponsors> sponsoredMembersAndTheirSponsors = perun.getMembersManager()
-        .getSponsoredMembersAndTheirSponsors(sess, myVo, Collections.emptyList());
-
-    assertThat(sponsoredMembersAndTheirSponsors).hasSize(1);
-    Member sponsoredMember = sponsoredMembersAndTheirSponsors.get(0).getMember();
-    List<Sponsor> sponsors = sponsoredMembersAndTheirSponsors.get(0).getSponsors();
-    assertThat(sponsoredMember).isEqualTo(member);
-    assertThat(sponsors).contains(new Sponsor(new RichUser(sponsor1, Collections.emptyList())));
-    assertThat(sponsors).contains(new Sponsor(new RichUser(sponsor2, Collections.emptyList())));
+    assertThat(enrichedBans).hasSize(1);
+    assertThat(enrichedBans.get(0).getBan()).isEqualTo(ban);
+    assertThat(enrichedBans.get(0).getMember()).isEqualTo(member);
+    assertThat(enrichedBans.get(0).getVo()).isEqualTo(createdVo);
+    assertThat(enrichedBans.get(0).getMember().getMemberAttributes()).hasSize(1);
+    assertThat(enrichedBans.get(0).getMember().getMemberAttributes().get(0).getFriendlyName()).isEqualTo("id");
   }
 
   @Test
-  public void convertSponsoredUsersWithNewSponsor() throws Exception {
-    System.out.println(CLASS_NAME + "convertSponsoredUsersWithNewSponsor");
+  public void getEnrichedVoById() throws Exception {
+    System.out.println(CLASS_NAME + "getEnrichedVoById");
 
-    myVo = vosManagerEntry.createVo(sess, myVo);
+    Vo vo = perun.getVosManagerBl().createVo(sess, myVo);
+    Vo parent = perun.getVosManagerBl().createVo(sess, new Vo(-1, "parent", "parent"));
+    Vo member = perun.getVosManagerBl().createVo(sess, new Vo(-2, "member", "member"));
 
-    User user = new User(-1, "Sponsored", "User", "", "", "");
-    user.setSponsoredUser(true);
-    User originalSponsor = new User(-1, "Sponsor 1", "", "", "", "");
-    User newSponsor = new User(-1, "Sponsor 2", "", "", "", "");
+    vosManagerEntry.addMemberVo(sess, vo, member);
+    vosManagerEntry.addMemberVo(sess, parent, vo);
 
-    user = perun.getUsersManagerBl().createUser(sess, user);
-    originalSponsor = perun.getUsersManagerBl().createUser(sess, originalSponsor);
-    newSponsor = perun.getUsersManagerBl().createUser(sess, newSponsor);
+    EnrichedVo enrichedVo = vosManagerEntry.getEnrichedVoById(sess, vo.getId());
 
-    perun.getUsersManagerBl().addSpecificUserOwner(sess, originalSponsor, user);
-
-    Member member = perun.getMembersManagerBl().createMember(sess, myVo, user);
-
-    perun.getVosManager().convertSponsoredUsersWithNewSponsor(sess, myVo, newSponsor);
-
-    List<MemberWithSponsors> sponsoredMembersAndTheirSponsors = perun.getMembersManager()
-        .getSponsoredMembersAndTheirSponsors(sess, myVo, Collections.emptyList());
-
-    assertThat(sponsoredMembersAndTheirSponsors).hasSize(1);
-    Member sponsoredMember = sponsoredMembersAndTheirSponsors.get(0).getMember();
-    List<Sponsor> sponsors = sponsoredMembersAndTheirSponsors.get(0).getSponsors();
-    assertThat(sponsoredMember).isEqualTo(member);
-    assertThat(sponsors).contains(new Sponsor(new RichUser(newSponsor, Collections.emptyList())));
+    assertThat(enrichedVo.getVo()).isEqualTo(vo);
+    assertThat(enrichedVo.getMemberVos()).containsOnly(member);
+    assertThat(enrichedVo.getParentVos()).containsOnly(parent);
   }
 
   @Test
-  public void getCompleteCandidatesFromGroup() throws Exception {
-    System.out.println(CLASS_NAME + "getCompleteCandidatesFromGroup");
+  public void getEnrichedVos() throws Exception {
+    System.out.println(CLASS_NAME + "getEnrichedVos");
 
-    // create group and vo
-    myVo = perun.getVosManagerBl().createVo(sess, myVo);
-    Group group = new Group("testGroup", "testingGroup");
-    Group returnedGroup = perun.getGroupsManager().createGroup(sess, myVo, group);
+    Vo vo = perun.getVosManagerBl().createVo(sess, myVo);
+    Vo parent = perun.getVosManagerBl().createVo(sess, new Vo(-1, "parent", "parent"));
+    Vo member = perun.getVosManagerBl().createVo(sess, new Vo(-2, "member", "member"));
 
-    // prepare second extSource
-    ExtSource extSource = new ExtSource("testExtSource", ExtSourcesManager.EXTSOURCE_INTERNAL);
-    extSource = perun.getExtSourcesManagerBl().createExtSource(sess, extSource, null);
+    vosManagerEntry.addMemberVo(sess, vo, member);
+    vosManagerEntry.addMemberVo(sess, parent, vo);
 
-    // prepare users to be returned by getCompleteCandidates
-    Candidate candidate = prepareCandidateWithExtSource("Jan", es);
-    User userToContain1 = perun.getUsersManagerBl()
-        .getRichUser(sess, perun.getUsersManagerBl().createUser(sess, candidate));
-    candidate = prepareCandidateWithExtSource("Jana", es);
-    User userToContain2 = perun.getUsersManagerBl()
-        .getRichUser(sess, perun.getUsersManagerBl().createUser(sess, candidate));
-    candidate = prepareCandidateWithExtSource("Josef", es);
-    User userNotToContain1 = perun.getUsersManagerBl()
-        .getRichUser(sess, perun.getUsersManagerBl().createUser(sess, candidate));
-    candidate = prepareCandidateWithExtSource("Jan", extSource);
-    RichUser userNotToContain2 = perun.getUsersManagerBl()
-        .getRichUser(sess, perun.getUsersManagerBl().createUser(sess, candidate));
-    candidate = prepareCandidateWithExtSource("Jana", extSource);
-    RichUser userToContain3 = perun.getUsersManagerBl()
-        .getRichUser(sess, perun.getUsersManagerBl().createUser(sess, candidate));
-    Member member = perun.getMembersManagerBl().createMember(sess, myVo, candidate);
+    assertThat(vosManagerEntry.getEnrichedVos(sess).size()).isEqualTo(3);
+    EnrichedVo enrichedVo =
+        vosManagerEntry.getEnrichedVos(sess).stream().filter(enrichedVo1 -> enrichedVo1.getVo().equals(vo)).toList()
+            .get(0);
 
-    List<MemberCandidate> completeCandidates = perun.getVosManagerBl()
-        .getCompleteCandidates(sess, myVo, returnedGroup, null, "jan", Arrays.asList(es));
-
-    List<RichUser> usersOfCompleteCandidates = completeCandidates.stream()
-        .map(MemberCandidate::getRichUser)
-        .collect(Collectors.toList());
-
-    assertEquals("Three users should have been returned.", 3, usersOfCompleteCandidates.size());
-    assertTrue("User should've been returned.", usersOfCompleteCandidates.contains(userToContain1));
-    assertTrue("User should've been returned.", usersOfCompleteCandidates.contains(userToContain2));
-    assertTrue("User should've been returned.", usersOfCompleteCandidates.contains(userToContain3));
-    assertFalse("User shouldn't have been returned.", usersOfCompleteCandidates.contains(userNotToContain1));
-    assertFalse("User shouldn't have been returned.", usersOfCompleteCandidates.contains(userNotToContain2));
-  }
-
-  @Test
-  public void getCompleteCandidatesFromGroupWithNullVo() throws Exception {
-    System.out.println(CLASS_NAME + "getCompleteCandidatesFromGroupWithNullVo");
-
-    // create group and vo
-    myVo = perun.getVosManagerBl().createVo(sess, myVo);
-    Group group = new Group("testGroup", "testingGroup");
-    Group returnedGroup = perun.getGroupsManager().createGroup(sess, myVo, group);
-
-    // prepare second extSource
-    ExtSource extSource = new ExtSource("testExtSource", ExtSourcesManager.EXTSOURCE_INTERNAL);
-    extSource = perun.getExtSourcesManagerBl().createExtSource(sess, extSource, null);
-
-    // prepare users to be returned by getCompleteCandidates
-    Candidate candidate = prepareCandidateWithExtSource("Jan", es);
-    User userToContain1 = perun.getUsersManagerBl()
-        .getRichUser(sess, perun.getUsersManagerBl().createUser(sess, candidate));
-    candidate = prepareCandidateWithExtSource("Josef", es);
-    User userNotToContain1 = perun.getUsersManagerBl()
-        .getRichUser(sess, perun.getUsersManagerBl().createUser(sess, candidate));
-    candidate = prepareCandidateWithExtSource("Jana", extSource);
-    RichUser userToContain2 = perun.getUsersManagerBl()
-        .getRichUser(sess, perun.getUsersManagerBl().createUser(sess, candidate));
-
-    List<MemberCandidate> completeCandidates = perun.getVosManagerBl()
-        .getCompleteCandidates(sess, null, returnedGroup, null, "jan", Arrays.asList(es));
-
-    List<RichUser> usersOfCompleteCandidates = completeCandidates.stream()
-        .map(MemberCandidate::getRichUser)
-        .collect(Collectors.toList());
-
-    assertEquals("Three users should have been returned.", 2, usersOfCompleteCandidates.size());
-    assertTrue("User should've been returned.", usersOfCompleteCandidates.contains(userToContain1));
-    assertTrue("User should've been returned.", usersOfCompleteCandidates.contains(userToContain2));
-    assertFalse("User shouldn't have been returned.", usersOfCompleteCandidates.contains(userNotToContain1));
-  }
-
-  @Test
-  public void getVoMembersCountsByStatus() throws Exception {
-    System.out.println(CLASS_NAME + "getVoMembersCountsByStatus");
-
-    myVo = perun.getVosManagerBl().createVo(sess, myVo);
-
-    createMemberFromExtSource(myVo);
-
-    Member disabledMember = createMemberFromExtSource(myVo);
-    perun.getMembersManager().setStatus(sess, disabledMember, Status.DISABLED);
-
-    Map<Status, Integer> counts = vosManagerEntry.getVoMembersCountsByStatus(sess, myVo);
-    assertThat(counts.get(Status.VALID)).isEqualTo(1);
-    assertThat(counts.get(Status.DISABLED)).isEqualTo(1);
-    assertThat(counts.get(Status.INVALID)).isEqualTo(0);
-    assertThat(counts.get(Status.EXPIRED)).isEqualTo(0);
-  }
-
-  @Test(expected = VoNotExistsException.class)
-  public void getVoMembersCountsByStatusWhenVoNotExists() throws Exception {
-    System.out.println(CLASS_NAME + "getVoMembersCountsByStatusWhenVoNotExists");
-
-    vosManagerEntry.getVoMembersCountsByStatus(sess, new Vo());
+    assertThat(enrichedVo.getVo()).isEqualTo(vo);
+    assertThat(enrichedVo.getMemberVos()).containsOnly(member);
+    assertThat(enrichedVo.getParentVos()).containsOnly(parent);
   }
 
   @Test
@@ -867,327 +856,114 @@ public class VosManagerEntryIntegrationTest extends AbstractPerunIntegrationTest
   }
 
   @Test
-  public void removeNonexistingMemberVo() throws Exception {
-    System.out.println(CLASS_NAME + "removeNonexistingMemberVo");
+  public void getVoById() throws Exception {
+    System.out.println(CLASS_NAME + "getVoById");
 
-    Vo vo = perun.getVosManagerBl().createVo(sess, myVo);
-    Vo vo2 = perun.getVosManagerBl().createVo(sess, new Vo(-1, "Vo2", "vo2"));
-    assertThatExceptionOfType(RelationNotExistsException.class)
-        .isThrownBy(() -> vosManagerEntry.removeMemberVo(sess, vo, vo2));
+    final Vo createdVo = vosManagerEntry.createVo(sess, myVo);
+    final Vo returnedVo = vosManagerEntry.getVoById(sess, createdVo.getId());
+
+    final String createVoFailMsg = "The created vo is not ok, maybe try to check createVo()?";
+
+    assertNotNull(createVoFailMsg, createdVo);
+    assertNotNull("returned vo should not be null", returnedVo);
+
+    assertEquals(createdVo.getId(), returnedVo.getId());
+    assertEquals("name is not the same", createdVo.getName(), returnedVo.getName());
+    assertEquals("shortName is not the same", createdVo.getShortName(), returnedVo.getShortName());
+    assertThat(returnedVo.getUuid()).isNotNull();
+    assertThat(returnedVo.getUuid().version()).isEqualTo(4);
   }
 
   @Test
-  public void addMemberVo() throws Exception {
-    System.out.println(CLASS_NAME + "addMemberVo");
+  public void getVoByShortName() throws Exception {
+    System.out.println(CLASS_NAME + "getVoByShortName");
 
-    Vo vo = perun.getVosManagerBl().createVo(sess, myVo);
-    Vo memberVo = perun.getVosManagerBl().createVo(sess, new Vo(-1, "Vo2", "vo2"));
+    final Vo createdVo = vosManagerEntry.createVo(sess, myVo);
+    final Vo returnedVo = vosManagerEntry.getVoByShortName(sess, voShortName);
 
-    vosManagerEntry.addMemberVo(sess, vo, memberVo);
-    assertThat(vosManagerEntry.getMemberVos(sess, vo.getId())).containsExactly(memberVo);
+    assertEquals(createdVo, returnedVo);
   }
 
   @Test
-  public void addMemberVoParent() throws Exception {
-    System.out.println(CLASS_NAME + "addMemberVo");
+  public void getVoMembersCountsByStatus() throws Exception {
+    System.out.println(CLASS_NAME + "getVoMembersCountsByStatus");
 
-    Vo vo = perun.getVosManagerBl().createVo(sess, myVo);
-    Vo memberVo = perun.getVosManagerBl().createVo(sess, new Vo(-1, "Vo2", "vo2"));
+    myVo = perun.getVosManagerBl().createVo(sess, myVo);
 
-    vosManagerEntry.addMemberVo(sess, vo, memberVo);
-    assertThat(vosManagerEntry.getMemberVos(sess, vo.getId())).containsExactly(memberVo);
+    createMemberFromExtSource(myVo);
 
-    assertThatExceptionOfType(RelationExistsException.class)
-        .isThrownBy(() -> vosManagerEntry.addMemberVo(sess, memberVo, vo));
+    Member disabledMember = createMemberFromExtSource(myVo);
+    perun.getMembersManager().setStatus(sess, disabledMember, Status.DISABLED);
+
+    Map<Status, Integer> counts = vosManagerEntry.getVoMembersCountsByStatus(sess, myVo);
+    assertThat(counts.get(Status.VALID)).isEqualTo(1);
+    assertThat(counts.get(Status.DISABLED)).isEqualTo(1);
+    assertThat(counts.get(Status.INVALID)).isEqualTo(0);
+    assertThat(counts.get(Status.EXPIRED)).isEqualTo(0);
+  }
+
+  @Test(expected = VoNotExistsException.class)
+  public void getVoMembersCountsByStatusWhenVoNotExists() throws Exception {
+    System.out.println(CLASS_NAME + "getVoMembersCountsByStatusWhenVoNotExists");
+
+    vosManagerEntry.getVoMembersCountsByStatus(sess, new Vo());
+  }
+
+  @Test(expected = VoNotExistsException.class)
+  public void getVoWhichNotExists() throws Exception {
+    System.out.println(CLASS_NAME + "getVoWhichNotExists");
+
+    final String nonExistingShortName = "_i_am_not_in_db_";
+    vosManagerEntry.getVoByShortName(sess, nonExistingShortName);
   }
 
   @Test
-  public void removeMemberVo() throws Exception {
-    System.out.println(CLASS_NAME + "removeMemberVo");
+  public void getVos() throws Exception {
+    System.out.println(CLASS_NAME + "getVos");
 
-    Vo vo = perun.getVosManagerBl().createVo(sess, myVo);
-    Vo memberVo = perun.getVosManagerBl().createVo(sess, new Vo(-1, "Vo2", "vo2"));
-    vosManagerEntry.addMemberVo(sess, vo, memberVo);
+    final Vo vo = vosManagerEntry.createVo(sess, myVo);
+    final List<Vo> vos = vosManagerEntry.getVos(sess);
 
-    assertThat(vosManagerEntry.getMemberVos(sess, vo.getId())).containsExactly(memberVo);
-
-    vosManagerEntry.removeMemberVo(sess, vo, memberVo);
-    assertThat(vosManagerEntry.getMemberVos(sess, vo.getId())).containsExactly();
+    assertTrue(vos.contains(vo));
   }
 
   @Test
-  public void addExistingMemberVo() throws Exception {
-    System.out.println(CLASS_NAME + "addExistingMemberVo");
+  public void getVosByIds() throws Exception {
+    System.out.println(CLASS_NAME + "getVosByIds");
 
-    Vo vo = perun.getVosManagerBl().createVo(sess, myVo);
-    Vo vo2 = perun.getVosManagerBl().createVo(sess, new Vo(-1, "Vo2", "vo2"));
-    vosManagerEntry.addMemberVo(sess, vo, vo2);
-    assertThatExceptionOfType(RelationExistsException.class)
-        .isThrownBy(() -> vosManagerEntry.addMemberVo(sess, vo, vo2));
+    Vo createdVo = vosManagerEntry.createVo(sess, myVo);
+    List<Vo> vos = vosManagerEntry.getVosByIds(sess, Collections.singletonList(createdVo.getId()));
+    assertEquals(vos.size(), 1);
+    assertTrue(vos.contains(createdVo));
+
+    Vo anotherVo = vosManagerEntry.createVo(sess, new Vo(0, myVo.getName() + "2nd", myVo.getShortName() + "2nd"));
+    vos = vosManagerEntry.getVosByIds(sess, Arrays.asList(createdVo.getId(), anotherVo.getId()));
+    assertEquals(vos.size(), 2);
+    assertTrue(vos.contains(createdVo));
+    assertTrue(vos.contains(anotherVo));
+
+    vos = vosManagerEntry.getVosByIds(sess, Collections.singletonList(anotherVo.getId()));
+    assertEquals(vos.size(), 1);
+    assertTrue(vos.contains(anotherVo));
   }
 
   @Test
-  public void getEnrichedVos() throws Exception {
-    System.out.println(CLASS_NAME + "getEnrichedVos");
+  public void getVosCount() throws Exception {
+    System.out.println(CLASS_NAME + "getVosCount");
 
-    Vo vo = perun.getVosManagerBl().createVo(sess, myVo);
-    Vo parent = perun.getVosManagerBl().createVo(sess, new Vo(-1, "parent", "parent"));
-    Vo member = perun.getVosManagerBl().createVo(sess, new Vo(-2, "member", "member"));
+    final Vo createdVo = vosManagerEntry.createVo(sess, myVo);
 
-    vosManagerEntry.addMemberVo(sess, vo, member);
-    vosManagerEntry.addMemberVo(sess, parent, vo);
-
-    assertThat(vosManagerEntry.getEnrichedVos(sess).size()).isEqualTo(3);
-    EnrichedVo enrichedVo = vosManagerEntry.getEnrichedVos(sess).stream()
-        .filter(enrichedVo1 -> enrichedVo1.getVo().equals(vo)).toList().get(0);
-
-    assertThat(enrichedVo.getVo()).isEqualTo(vo);
-    assertThat(enrichedVo.getMemberVos()).containsOnly(member);
-    assertThat(enrichedVo.getParentVos()).containsOnly(parent);
+    int count = vosManagerEntry.getVosCount(sess);
+    assertTrue(count > 0);
   }
 
   @Test
-  public void getEnrichedVoById() throws Exception {
-    System.out.println(CLASS_NAME + "getEnrichedVoById");
+  public void getVosNotNull() throws Exception {
+    System.out.println(CLASS_NAME + "getVosNotNull");
 
-    Vo vo = perun.getVosManagerBl().createVo(sess, myVo);
-    Vo parent = perun.getVosManagerBl().createVo(sess, new Vo(-1, "parent", "parent"));
-    Vo member = perun.getVosManagerBl().createVo(sess, new Vo(-2, "member", "member"));
-
-    vosManagerEntry.addMemberVo(sess, vo, member);
-    vosManagerEntry.addMemberVo(sess, parent, vo);
-
-    EnrichedVo enrichedVo = vosManagerEntry.getEnrichedVoById(sess, vo.getId());
-
-    assertThat(enrichedVo.getVo()).isEqualTo(vo);
-    assertThat(enrichedVo.getMemberVos()).containsOnly(member);
-    assertThat(enrichedVo.getParentVos()).containsOnly(parent);
-  }
-
-  @Test
-  public void addMemberVoNoExistingMember() throws Exception {
-    System.out.println(CLASS_NAME + "addMemberVoNoExistingMember");
-
-    Vo vo = perun.getVosManagerBl().createVo(sess, myVo);
-    Vo memberVo = perun.getVosManagerBl().createVo(sess, new Vo(-1, "Vo2", "vo2"));
-
-    Member member = createMemberFromExtSource(memberVo);
-    vosManagerEntry.addMemberVo(sess, vo, memberVo);
-
-    assertThat(perun.getMembersManagerBl().getMembers(sess, vo).size()).isEqualTo(1);
-    assertThat(perun.getMembersManagerBl().getMembers(sess, vo).get(0).getUserId()).isEqualTo(member.getUserId());
-
-    List<Member> membersInParentVo = perun.getMembersManagerBl().getMembers(sess, vo);
-    assertThat(membersInParentVo.size()).isEqualTo(1);
-    assertThat(
-        perun.getAttributesManagerBl().getAttribute(sess, membersInParentVo.get(0), A_MEMBER_DEF_MEMBER_ORGANIZATIONS)
-            .valueAsList())
-        .contains(memberVo.getShortName());
-    assertThat(perun.getAttributesManagerBl()
-        .getAttribute(sess, membersInParentVo.get(0), A_MEMBER_DEF_MEMBER_ORGANIZATIONS_HISTORY).valueAsList())
-        .contains(memberVo.getShortName());
-  }
-
-  @Test
-  public void addMemberVoExistingMember() throws Exception {
-    System.out.println(CLASS_NAME + "addMemberVoExistingMember");
-
-    Vo vo = perun.getVosManagerBl().createVo(sess, myVo);
-    Vo memberVo1 = perun.getVosManagerBl().createVo(sess, new Vo(-1, "Vo2", "vo2"));
-    Vo memberVo2 = perun.getVosManagerBl().createVo(sess, new Vo(-2, "Vo3", "vo3"));
-
-    Member member1 = createMemberFromExtSource(memberVo1);
-    Member member2 = perun.getMembersManagerBl()
-        .createMember(sess, memberVo2, perun.getUsersManagerBl().getUserByMember(sess, member1));
-    perun.getMembersManagerBl().validateMember(sess, member2);
-    vosManagerEntry.addMemberVo(sess, vo, memberVo1);
-    vosManagerEntry.addMemberVo(sess, vo, memberVo2);
-
-    List<Member> membersInParentVo = perun.getMembersManagerBl().getMembers(sess, vo);
-    assertThat(membersInParentVo.size()).isEqualTo(1);
-    assertThat(
-        perun.getAttributesManagerBl().getAttribute(sess, membersInParentVo.get(0), A_MEMBER_DEF_MEMBER_ORGANIZATIONS)
-            .valueAsList())
-        .contains(memberVo1.getShortName(), memberVo2.getShortName());
-    assertThat(perun.getAttributesManagerBl()
-        .getAttribute(sess, membersInParentVo.get(0), A_MEMBER_DEF_MEMBER_ORGANIZATIONS_HISTORY).valueAsList())
-        .contains(memberVo1.getShortName(), memberVo2.getShortName());
-  }
-
-  @Test
-  public void removeMemberVoClearsMemberOrganizationsAttribute() throws Exception {
-    System.out.println(CLASS_NAME + "removeMemberVoClearsMemberOrganizationsAttribute");
-
-    Vo vo = perun.getVosManagerBl().createVo(sess, myVo);
-    Vo memberVo = perun.getVosManagerBl().createVo(sess, new Vo(-1, "Vo2", "vo2"));
-
-    Member member = createMemberFromExtSource(memberVo);
-    vosManagerEntry.addMemberVo(sess, vo, memberVo);
-    Member memberInParent = perun.getMembersManagerBl().getMemberByUserId(sess, vo, member.getUserId());
-
-    List<String> expectedAttributeValue = new ArrayList<>(List.of(memberVo.getShortName()));
-
-    assertThat(perun.getAttributesManagerBl().getAttribute(sess, memberInParent, A_MEMBER_DEF_MEMBER_ORGANIZATIONS)
-        .valueAsList())
-        .isEqualTo(expectedAttributeValue);
-    assertThat(
-        perun.getAttributesManagerBl().getAttribute(sess, memberInParent, A_MEMBER_DEF_MEMBER_ORGANIZATIONS_HISTORY)
-            .valueAsList())
-        .isEqualTo(expectedAttributeValue);
-
-    vosManagerEntry.removeMemberVo(sess, vo, memberVo);
-    assertThat(perun.getAttributesManagerBl().getAttribute(sess, memberInParent, A_MEMBER_DEF_MEMBER_ORGANIZATIONS)
-        .valueAsList())
-        .isNullOrEmpty();
-    assertThat(
-        perun.getAttributesManagerBl().getAttribute(sess, memberInParent, A_MEMBER_DEF_MEMBER_ORGANIZATIONS_HISTORY)
-            .valueAsList())
-        .isEqualTo(expectedAttributeValue);
-  }
-
-  @Test
-  public void deleteParentVoInHierarchy() throws Exception {
-    System.out.println(CLASS_NAME + "deleteParentVoInHierarchy");
-
-    Vo vo = perun.getVosManagerBl().createVo(sess, myVo);
-    Vo memberVo = perun.getVosManagerBl().createVo(sess, new Vo(-1, "Vo2", "vo2"));
-
-    vosManagerEntry.addMemberVo(sess, vo, memberVo);
-
-    assertThatExceptionOfType(InternalErrorException.class).isThrownBy(() -> vosManagerEntry.deleteVo(sess, vo, false));
-
-    vosManagerEntry.deleteVo(sess, vo, true);
-    assertThatExceptionOfType(VoNotExistsException.class).isThrownBy(() ->
-        vosManagerEntry.getVoById(sess, vo.getId()));
-  }
-
-  @Test
-  public void deleteMemberVoInHierarchy() throws Exception {
-    System.out.println(CLASS_NAME + "deleteMemberVoInHierarchy");
-
-    Vo vo = perun.getVosManagerBl().createVo(sess, myVo);
-    Vo memberVo = perun.getVosManagerBl().createVo(sess, new Vo(-1, "Vo2", "vo2"));
-
-    vosManagerEntry.addMemberVo(sess, vo, memberVo);
-
-    assertThatExceptionOfType(InternalErrorException.class).isThrownBy(
-        () -> vosManagerEntry.deleteVo(sess, memberVo, false));
-
-    vosManagerEntry.deleteVo(sess, memberVo, true);
-    assertThatExceptionOfType(VoNotExistsException.class).isThrownBy(() ->
-        vosManagerEntry.getVoById(sess, memberVo.getId()));
-  }
-
-  @Test
-  public void addMemberWithMemberVoResetsExpiration() throws Exception {
-    System.out.println(CLASS_NAME + "addMemberWithMemberVoResetsExpiration");
-
-    Vo vo = perun.getVosManagerBl().createVo(sess, myVo);
-    Vo memberVo = perun.getVosManagerBl().createVo(sess, new Vo(-1, "Vo2", "vo2"));
-    Member memberWithExpiration = createMemberFromExtSource(vo);
-    Member memberWithoutExpiration = perun.getMembersManagerBl()
-        .createMember(sess, memberVo, perun.getUsersManagerBl().getUserByMember(sess, memberWithExpiration));
-    perun.getMembersManagerBl().validateMember(sess, memberWithoutExpiration);
-
-    String membershipExpirationAttrName = perun.getAttributesManager().NS_MEMBER_ATTR_DEF + ":membershipExpiration";
-    String expirationValue = "2020-02-02";
-
-    AttributeDefinition attrDef =
-        perun.getAttributesManagerBl().getAttributeDefinition(sess, membershipExpirationAttrName);
-    perun.getAttributesManagerBl().setAttribute(sess, memberWithExpiration, new Attribute(attrDef, expirationValue));
-
-    AttributeDefinition memberOrgsAttrDef =
-        perun.getAttributesManagerBl().getAttributeDefinition(sess, A_MEMBER_DEF_MEMBER_ORGANIZATIONS);
-    perun.getAttributesManagerBl().setAttribute(sess, memberWithExpiration,
-        new Attribute(memberOrgsAttrDef, new ArrayList<>(List.of(vo.getShortName()))));
-    perun.getAttributesManagerBl().setAttribute(sess, memberWithoutExpiration,
-        new Attribute(memberOrgsAttrDef, new ArrayList<>(List.of(vo.getShortName()))));
-
-    AttributeDefinition memberOrgsHistoryAttrDef =
-        perun.getAttributesManagerBl().getAttributeDefinition(sess, A_MEMBER_DEF_MEMBER_ORGANIZATIONS_HISTORY);
-    perun.getAttributesManagerBl().setAttribute(sess, memberWithExpiration,
-        new Attribute(memberOrgsHistoryAttrDef, new ArrayList<>(List.of(vo.getShortName()))));
-    perun.getAttributesManagerBl().setAttribute(sess, memberWithoutExpiration,
-        new Attribute(memberOrgsHistoryAttrDef, new ArrayList<>(List.of(vo.getShortName()))));
-
-    assertEquals(perun.getAttributesManagerBl().getAttribute(sess, memberWithExpiration, membershipExpirationAttrName)
-        .getValue(), expirationValue);
-    assertNull(perun.getAttributesManagerBl().getAttribute(sess, memberWithoutExpiration, membershipExpirationAttrName)
-        .getValue());
-
-    vosManagerEntry.addMemberVo(sess, vo, memberVo);
-    assertNull(perun.getAttributesManagerBl().getAttribute(sess, memberWithExpiration, membershipExpirationAttrName)
-        .getValue());
-    assertNull(perun.getAttributesManagerBl().getAttribute(sess, memberWithoutExpiration, membershipExpirationAttrName)
-        .getValue());
-  }
-
-  @Test
-  public void removeMemberVoStartsParentVoLifecycle() throws Exception {
-    System.out.println(CLASS_NAME + "removeMemberVoStartsParentVoLifecycle");
-
-    Vo vo = perun.getVosManagerBl().createVo(sess, myVo);
-    Vo memberVo = perun.getVosManagerBl().createVo(sess, new Vo(-1, "Vo2", "vo2"));
-    Member member = createMemberFromExtSource(memberVo);
-    perun.getMembersManagerBl().validateMember(sess, member);
-
-    // set expiration rules for parent vo
-    Attribute membershipExpirationRulesAttribute =
-        perun.getAttributesManagerBl().getAttribute(sess, vo, MembersManager.membershipExpirationRulesAttributeName);
-    LinkedHashMap<String, String> expirationRules = new LinkedHashMap<>();
-    expirationRules.put(AbstractMembershipExpirationRulesModule.membershipPeriodKeyName, "01.01.");
-    membershipExpirationRulesAttribute.setValue(expirationRules);
-    perun.getAttributesManagerBl().setAttribute(sess, vo, membershipExpirationRulesAttribute);
-
-    vosManagerEntry.addMemberVo(sess, vo, memberVo);
-
-    String membershipExpirationAttrName = perun.getAttributesManager().NS_MEMBER_ATTR_DEF + ":membershipExpiration";
-    Member memberInParentVo = perun.getMembersManagerBl().getMemberByUserId(sess, vo, member.getUserId());
-
-    Attribute membersExpirationAttribute =
-        perun.getAttributesManagerBl().getAttribute(sess, memberInParentVo, membershipExpirationAttrName);
-    assertThat(membersExpirationAttribute.getValue() == null);
-
-    vosManagerEntry.removeMemberVo(sess, vo, memberVo);
-
-    membersExpirationAttribute =
-        perun.getAttributesManagerBl().getAttribute(sess, memberInParentVo, membershipExpirationAttrName);
-    assertThat(membersExpirationAttribute.toString().endsWith("-01-01"));
-  }
-
-  @Test
-  public void addFirstMemberVoSetsMemberOrganizations() throws Exception {
-    System.out.println(CLASS_NAME + "addFirstMemberVoSetsMemberOrganizations");
-
-    Vo vo = perun.getVosManagerBl().createVo(sess, myVo);
-    Vo memberVo = perun.getVosManagerBl().createVo(sess, new Vo(-1, "Vo2", "vo2"));
-    Member member = createMemberFromExtSource(vo);
-
-    perun.getVosManagerBl().addMemberVo(sess, vo, memberVo);
-
-    assertThat(perun.getAttributesManagerBl().getAttribute(sess, member, A_MEMBER_DEF_MEMBER_ORGANIZATIONS)
-        .valueAsList()).containsOnly(vo.getShortName());
-    assertThat(perun.getAttributesManagerBl().getAttribute(sess, member, A_MEMBER_DEF_MEMBER_ORGANIZATIONS_HISTORY)
-        .valueAsList()).containsOnly(vo.getShortName());
-  }
-
-  // private methods ------------------------------------------------------------------
-
-  private Member createMemberFromExtSource(final Vo createdVo) throws Exception {
-
-    //This is obsolete approach which is dependent on extSource, remove these lines in future...
-    //addExtSourceDelegate(createdVo);
-    //final List<Candidate> candidates = vosManagerEntry.findCandidates(sess,
-    //		createdVo, "kouril", 1);
-
-    final Candidate candidate = prepareCandidate();
-
-    final MembersManager membersManagerEntry = perun.getMembersManager();
-    final Member member = perun.getMembersManagerBl().createMemberSync(sess, createdVo, candidate);//candidates.get(0));
-    assertNotNull("No member created", member);
-    usersForDeletion.add(perun.getUsersManager().getUserByMember(sess, member));
-    // save user for deletion after test
-    return member;
+    // should not never return null or throw exception, even if no result
+    // found
+    assertNotNull(vosManagerEntry.getVos(sess));
   }
 
   private Candidate prepareCandidate() {
@@ -1197,7 +973,7 @@ public class VosManagerEntryIntegrationTest extends AbstractPerunIntegrationTest
     String extLogin =
         Long.toHexString(Double.doubleToLongBits(Math.random()));              // his login in external source
 
-    final Candidate candidate = new Candidate();//Mockito.mock(Candidate.class);
+    final Candidate candidate = new Candidate(); //Mockito.mock(Candidate.class);
     candidate.setFirstName(userFirstName);
     candidate.setId(0);
     candidate.setMiddleName("");
@@ -1210,16 +986,6 @@ public class VosManagerEntryIntegrationTest extends AbstractPerunIntegrationTest
     candidate.setAttributes(new HashMap<>());
     return candidate;
 
-  }
-
-  private void addExtSourceDelegate(final Vo createdVo) throws Exception {
-    ExtSourcesManager esme = perun.getExtSourcesManager();
-    esme.addExtSource(sess, createdVo, es);
-  }
-
-  private void removeExtSourceDelegate(Vo createdVo) throws Exception {
-    ExtSourcesManager esme = perun.getExtSourcesManager();
-    esme.removeExtSource(sess, createdVo, es);
   }
 
   private Candidate prepareCandidateWithExtSource(String name, ExtSource es) {
@@ -1240,13 +1006,236 @@ public class VosManagerEntryIntegrationTest extends AbstractPerunIntegrationTest
   }
 
   @Test
-  public void getVosCount() throws Exception {
-    System.out.println(CLASS_NAME + "getVosCount");
+  public void removeAdmin() throws Exception {
+    System.out.println(CLASS_NAME + "removeAdmin");
+
+    final Vo createdVo = vosManagerEntry.createVo(sess, myVo);
+    final Member member = createMemberFromExtSource(createdVo);
+    User user = perun.getUsersManagerBl().getUserByMember(sess, member);
+
+    vosManagerEntry.addAdmin(sess, createdVo, user);
+    assertTrue(vosManagerEntry.getAdmins(sess, createdVo).contains(user));
+
+    vosManagerEntry.removeAdmin(sess, createdVo, user);
+    assertFalse(vosManagerEntry.getAdmins(sess, createdVo).contains(user));
+  }
+
+  @Test(expected = UserNotExistsException.class)
+  public void removeAdminWhichNotExists() throws Exception {
+    System.out.println(CLASS_NAME + "removeAdminWhichNotExists");
 
     final Vo createdVo = vosManagerEntry.createVo(sess, myVo);
 
-    int count = vosManagerEntry.getVosCount(sess);
-    assertTrue(count > 0);
+    vosManagerEntry.removeAdmin(sess, createdVo, new User());
+  }
+
+  @Test
+  public void removeAdminWithGroup() throws Exception {
+    System.out.println(CLASS_NAME + "removeAdminWithGroup");
+
+    final Vo createdVo = vosManagerEntry.createVo(sess, myVo);
+
+    // set up authorized group
+    Group authorizedGroup = new Group("authorizedGroup", "testovaciGroup");
+    Group returnedGroup = perun.getGroupsManager().createGroup(sess, createdVo, authorizedGroup);
+    vosManagerEntry.addAdmin(sess, createdVo, returnedGroup);
+
+    vosManagerEntry.removeAdmin(sess, createdVo, returnedGroup);
+    assertFalse(vosManagerEntry.getAdminGroups(sess, createdVo).contains(returnedGroup));
+  }
+
+  @Test
+  public void removeBanCorrectly() throws Exception {
+    System.out.println(CLASS_NAME + "removeBanCorrectly");
+
+    Vo createdVo = vosManagerEntry.createVo(sess, myVo);
+    Member member = createMemberFromExtSource(createdVo);
+
+    BanOnVo ban = new BanOnVo();
+    ban.setMemberId(member.getId());
+
+    vosManagerEntry.setBan(sess, ban);
+
+    vosManagerEntry.removeBan(sess, ban.getId());
+
+    assertThatExceptionOfType(BanNotExistsException.class).isThrownBy(
+        () -> vosManagerEntry.getBanById(sess, ban.getId()));
+  }
+
+  @Test
+  public void removeBanForMemberCorrectly() throws Exception {
+    System.out.println(CLASS_NAME + "removeBanForMemberCorrectly");
+
+    Vo createdVo = vosManagerEntry.createVo(sess, myVo);
+    Member member = createMemberFromExtSource(createdVo);
+
+    BanOnVo ban = new BanOnVo();
+    ban.setMemberId(member.getId());
+
+    vosManagerEntry.setBan(sess, ban);
+
+    vosManagerEntry.removeBanForMember(sess, member);
+
+    assertThat(vosManagerEntry.getBanForMember(sess, member)).isNull();
+  }
+
+  private void removeExtSourceDelegate(Vo createdVo) throws Exception {
+    ExtSourcesManager esme = perun.getExtSourcesManager();
+    esme.removeExtSource(sess, createdVo, es);
+  }
+
+  @Test
+  public void removeMemberVo() throws Exception {
+    System.out.println(CLASS_NAME + "removeMemberVo");
+
+    Vo vo = perun.getVosManagerBl().createVo(sess, myVo);
+    Vo memberVo = perun.getVosManagerBl().createVo(sess, new Vo(-1, "Vo2", "vo2"));
+    vosManagerEntry.addMemberVo(sess, vo, memberVo);
+
+    assertThat(vosManagerEntry.getMemberVos(sess, vo.getId())).containsExactly(memberVo);
+
+    vosManagerEntry.removeMemberVo(sess, vo, memberVo);
+    assertThat(vosManagerEntry.getMemberVos(sess, vo.getId())).containsExactly();
+  }
+
+  @Test
+  public void removeMemberVoClearsMemberOrganizationsAttribute() throws Exception {
+    System.out.println(CLASS_NAME + "removeMemberVoClearsMemberOrganizationsAttribute");
+
+    Vo vo = perun.getVosManagerBl().createVo(sess, myVo);
+    Vo memberVo = perun.getVosManagerBl().createVo(sess, new Vo(-1, "Vo2", "vo2"));
+
+    Member member = createMemberFromExtSource(memberVo);
+    vosManagerEntry.addMemberVo(sess, vo, memberVo);
+    Member memberInParent = perun.getMembersManagerBl().getMemberByUserId(sess, vo, member.getUserId());
+
+    List<String> expectedAttributeValue = new ArrayList<>(List.of(memberVo.getShortName()));
+
+    assertThat(perun.getAttributesManagerBl().getAttribute(sess, memberInParent, A_MEMBER_DEF_MEMBER_ORGANIZATIONS)
+        .valueAsList()).isEqualTo(expectedAttributeValue);
+    assertThat(
+        perun.getAttributesManagerBl().getAttribute(sess, memberInParent, A_MEMBER_DEF_MEMBER_ORGANIZATIONS_HISTORY)
+            .valueAsList()).isEqualTo(expectedAttributeValue);
+
+    vosManagerEntry.removeMemberVo(sess, vo, memberVo);
+    assertThat(perun.getAttributesManagerBl().getAttribute(sess, memberInParent, A_MEMBER_DEF_MEMBER_ORGANIZATIONS)
+        .valueAsList()).isNullOrEmpty();
+    assertThat(
+        perun.getAttributesManagerBl().getAttribute(sess, memberInParent, A_MEMBER_DEF_MEMBER_ORGANIZATIONS_HISTORY)
+            .valueAsList()).isEqualTo(expectedAttributeValue);
+  }
+
+  @Test
+  public void removeMemberVoStartsParentVoLifecycle() throws Exception {
+    System.out.println(CLASS_NAME + "removeMemberVoStartsParentVoLifecycle");
+
+    Vo vo = perun.getVosManagerBl().createVo(sess, myVo);
+    Vo memberVo = perun.getVosManagerBl().createVo(sess, new Vo(-1, "Vo2", "vo2"));
+    Member member = createMemberFromExtSource(memberVo);
+    perun.getMembersManagerBl().validateMember(sess, member);
+
+    // set expiration rules for parent vo
+    Attribute membershipExpirationRulesAttribute =
+        perun.getAttributesManagerBl().getAttribute(sess, vo,
+            MembersManager.MEMBERSHIP_EXPIRATION_RULES_ATTRIBUTE_NAME);
+    LinkedHashMap<String, String> expirationRules = new LinkedHashMap<>();
+    expirationRules.put(AbstractMembershipExpirationRulesModule.MEMBERSHIP_PERIOD_KEY_NAME, "01.01.");
+    membershipExpirationRulesAttribute.setValue(expirationRules);
+    perun.getAttributesManagerBl().setAttribute(sess, vo, membershipExpirationRulesAttribute);
+
+    vosManagerEntry.addMemberVo(sess, vo, memberVo);
+
+    String membershipExpirationAttrName = perun.getAttributesManager().NS_MEMBER_ATTR_DEF + ":membershipExpiration";
+    Member memberInParentVo = perun.getMembersManagerBl().getMemberByUserId(sess, vo, member.getUserId());
+
+    Attribute membersExpirationAttribute =
+        perun.getAttributesManagerBl().getAttribute(sess, memberInParentVo, membershipExpirationAttrName);
+    assertThat(membersExpirationAttribute.getValue() == null);
+
+    vosManagerEntry.removeMemberVo(sess, vo, memberVo);
+
+    membersExpirationAttribute =
+        perun.getAttributesManagerBl().getAttribute(sess, memberInParentVo, membershipExpirationAttrName);
+    assertThat(membersExpirationAttribute.toString().endsWith("-01-01"));
+  }
+
+  // private methods ------------------------------------------------------------------
+
+  @Test
+  public void removeNonexistingMemberVo() throws Exception {
+    System.out.println(CLASS_NAME + "removeNonexistingMemberVo");
+
+    Vo vo = perun.getVosManagerBl().createVo(sess, myVo);
+    Vo vo2 = perun.getVosManagerBl().createVo(sess, new Vo(-1, "Vo2", "vo2"));
+    assertThatExceptionOfType(RelationNotExistsException.class).isThrownBy(
+        () -> vosManagerEntry.removeMemberVo(sess, vo, vo2));
+  }
+
+  @Test
+  public void setBanCorrectly() throws Exception {
+    System.out.println(CLASS_NAME + "setBanCorrectly");
+
+    Vo createdVo = vosManagerEntry.createVo(sess, myVo);
+    Member member = createMemberFromExtSource(createdVo);
+
+    BanOnVo ban = new BanOnVo();
+    ban.setMemberId(member.getId());
+
+    ban = vosManagerEntry.setBan(sess, ban);
+
+    assertThat(ban.getId()).isNotNull();
+    assertThat(ban.getVoId()).isNotNull();
+
+    BanOnVo foundBan = vosManagerEntry.getBanById(sess, ban.getId());
+
+    assertThat(foundBan).isEqualToIgnoringNullFields(ban);
+  }
+
+  @Before
+  public void setUp() throws Exception {
+    vosManagerEntry = perun.getVosManager();
+    myVo = new Vo(0, voName, voShortName);
+    ExtSource newExtSource = new ExtSource(extSourceName, ExtSourcesManager.EXTSOURCE_INTERNAL);
+    es = perun.getExtSourcesManager().createExtSource(sess, newExtSource, null);
+
+  }
+
+  @Test
+  public void updateBan() throws Exception {
+    System.out.println(CLASS_NAME + "updateBan");
+    Vo vo = vosManagerEntry.createVo(sess, myVo);
+    Member member = createMemberFromExtSource(vo);
+
+    BanOnVo banOnVo = new BanOnVo();
+    banOnVo.setMemberId(member.getId());
+    banOnVo.setDescription("Description");
+    banOnVo.setValidityTo(new Date());
+    banOnVo = vosManagerEntry.setBan(sess, banOnVo);
+    banOnVo.setDescription("New description");
+    banOnVo.setValidityTo(new Date(banOnVo.getValidityTo().getTime() + 1000000));
+    vosManagerEntry.updateBan(sess, banOnVo);
+
+    BanOnVo returnedBan = vosManagerEntry.getBanById(sess, banOnVo.getId());
+    assertEquals(banOnVo, returnedBan);
+  }
+
+  @Test
+  public void updateVo() throws Exception {
+    System.out.println(CLASS_NAME + "updateVo");
+
+    Vo voToUpdate = vosManagerEntry.createVo(sess, myVo);
+    voToUpdate.setName("Cosa");
+    voToUpdate.setShortName("Nostra");
+    final Vo updatedVo = vosManagerEntry.updateVo(sess, voToUpdate);
+
+    assertEquals(voToUpdate, updatedVo);
+  }
+
+  @Test(expected = VoNotExistsException.class)
+  public void updateVoWhichNotExists() throws Exception {
+    System.out.println(CLASS_NAME + "updateVoWhichNotExists");
+
+    vosManagerEntry.updateVo(sess, new Vo());
   }
 
 }
